Refactor: Update getSeasonWeek utility to use Chapter terminology
This commit updates the `getSeasonWeek` utility function to use "Chapter" instead of "Season" in type definitions and function names. The changes include:

- Renaming import and type references
- Updating function signatures
- Maintaining existing logic while using chapter-related terminology

--- a/src/lib/i18n/dictionaries/en.json
+++ b/src/lib/i18n/dictionaries/en.json
@@ -2203,9 +2203,9 @@
   "fruit.guide.one": "Fruit plays a significant role in Sunflower Land as a valuable resource that can be sold for Coins or utilized in various recipes and crafting. Unlike crops, fruit patches have the unique ability to replenish multiple times after each harvest, providing a sustainable source of fruit for players.",
   "fruit.guide.two": "To plant fruit, you'll need to acquire larger fruit patches, which become available after upgrading to Petal Paradise.",
   "fruit.guide.three": "By cultivating fruit and incorporating it into your farming strategies, you can maximize your profits, create delicious recipes, and unlock new possibilities in Sunflower Land.",
-  "seasons.guide.one": "Seasons in Sunflower Land bring excitement and freshness to the game, offering players new challenges and opportunities. With each season, players can look forward to a variety of new wearables and collectibles, seasonal mutants, and rare treasures, creating a dynamic and evolving gameplay experience. This encourages players to adapt their strategies and explore new possibilities on their farms. Additionally, seasonal tickets add a strategic element to the game. players must decide how to allocate their tickets wisely, whether it's collecting rare items, opting for decorations and cosmetics, or exchanging tickets for Coins. The seasonal mechanic keeps the game engaging and ensures that there's always something to look forward to in Sunflower Land.",
-  "seasons.guide.two": "The availability of seasonal wearables and collectibles at Stella's Mega Store, the Auction House and Jafar's shop adds another layer of excitement to Sunflower Land. Players must gather seasonal tickets, treasures, and other specific requirements to craft these seasonal items or bid on them at auctions, fostering a sense of competition and urgency. Planning ahead and strategizing become crucial as players aim to secure their desired items before time runs out.",
-  "seasons.guide.three": "With each season's unique offerings and the anticipation of surprise events, Sunflower Land keeps players engaged and entertained throughout the year, creating a vibrant and ever-evolving farming experience.",
+  "chapters.guide.one": "Seasons in Sunflower Land bring excitement and freshness to the game, offering players new challenges and opportunities. With each season, players can look forward to a variety of new wearables and collectibles, seasonal mutants, and rare treasures, creating a dynamic and evolving gameplay experience. This encourages players to adapt their strategies and explore new possibilities on their farms. Additionally, seasonal tickets add a strategic element to the game. players must decide how to allocate their tickets wisely, whether it's collecting rare items, opting for decorations and cosmetics, or exchanging tickets for Coins. The seasonal mechanic keeps the game engaging and ensures that there's always something to look forward to in Sunflower Land.",
+  "chapters.guide.two": "The availability of seasonal wearables and collectibles at Stella's Mega Store, the Auction House and Jafar's shop adds another layer of excitement to Sunflower Land. Players must gather seasonal tickets, treasures, and other specific requirements to craft these seasonal items or bid on them at auctions, fostering a sense of competition and urgency. Planning ahead and strategizing become crucial as players aim to secure their desired items before time runs out.",
+  "chapters.guide.three": "With each season's unique offerings and the anticipation of surprise events, Sunflower Land keeps players engaged and entertained throughout the year, creating a vibrant and ever-evolving farming experience.",
   "pete.teaser.one": "Chop the trees",
   "pete.teaser.three": "Harvest the Sunflowers",
   "pete.teaser.four": "Sell the Sunflowers",
@@ -2220,7 +2220,7 @@
   "harvestflower.notReady": "Flower is not ready to harvest",
   "harvestflower.alr.plant": "Flower is already planted",
   "hayseedHankv2.dialog1": "Well, howdy there, young whippersnappers! I'm Hayseed Hank, a seasoned ol' Bumpkin farmer, tending to the land like in the good ol' days.",
-  "hayseedHankv2.dialog2": "However, my bones ain't what they used to be. If you can help me with my daily chores, I will reward you with {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "However, my bones ain't what they used to be. If you can help me with my daily chores, I will reward you with {{chapterTicket}}.",
   "hayseedHankv2.action": "Let's do it",
   "hayseedHankv2.title": "Hank's Daily Chores",
   "hayseedHankv2.newChoresAvailable": "New chores: {{timeLeft}}",
@@ -3289,21 +3289,21 @@
   "season.free.with.lifetime": "Free with Lifetime Farmer",
   "season.bullRun.bonus": "10% less feed to feed animals",
   "season.ticket.bonus": "+2 {{item}}s (deliveries & chores)",
-  "season.codex.intro": "Earn {{ticket}}s to craft exclusive collectibles & wearables for your farm in this limited season...Hurry before time runs out!",
-  "season.codex.howToEarn": "How to earn {{ticket}}s?",
-  "season.codex.howToEarn.one": "Visit the plaza & deliver resources to Bumpkins.",
-  "season.codex.howToEarn.two": "Complete chores for Bumpkins. (Nov 11th)",
-  "season.codex.howToEarn.three": "Trade animal and flower bounties! (Nov 11th)",
-  "season.codex.nextDrop": "Next Drop",
-  "season.codex.nextDrop.available": "{{dropSupply}} available",
-  "season.codex.seasonalDrops": "Seasonal Drops",
-  "season.codex.seasonalDrops.description": "Compete with others for the rarest items! Visit the Auctioneer in the plaza for more details.",
-  "season.codex.soldOut": "Sold out",
-  "season.codex.mutants": "Mutants",
-  "season.codex.mutants.discover": "Discover the seasonal mutants!",
-  "season.codex.mutants.one": "Collect eggs to discover the {{item}}.",
-  "season.codex.mutants.two": "Fish in the depths for the {{item}}.",
-  "season.codex.mutants.three": "Experiment with flowers to discover the {{item}}.",
+  "chapter.codex.intro": "Earn {{ticket}}s to craft exclusive collectibles & wearables for your farm in this limited season...Hurry before time runs out!",
+  "chapter.codex.howToEarn": "How to earn {{ticket}}s?",
+  "chapter.codex.howToEarn.one": "Visit the plaza & deliver resources to Bumpkins.",
+  "chapter.codex.howToEarn.two": "Complete chores for Bumpkins. (Nov 11th)",
+  "chapter.codex.howToEarn.three": "Trade animal and flower bounties! (Nov 11th)",
+  "chapter.codex.nextDrop": "Next Drop",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} available",
+  "chapter.codex.chapterDrops": "Seasonal Drops",
+  "chapter.codex.chapterDrops.description": "Compete with others for the rarest items! Visit the Auctioneer in the plaza for more details.",
+  "chapter.codex.soldOut": "Sold out",
+  "chapter.codex.mutants": "Mutants",
+  "chapter.codex.mutants.discover": "Discover the seasonal mutants!",
+  "chapter.codex.mutants.one": "Collect eggs to discover the {{item}}.",
+  "chapter.codex.mutants.two": "Fish in the depths for the {{item}}.",
+  "chapter.codex.mutants.three": "Experiment with flowers to discover the {{item}}.",
   "share.TweetText": "Visit My Sunflower Land Farm",
   "share.ShareYourFarmLink": "Share Your Farm Link",
   "share.ShowOffToFarmers": "Show off to fellow farmers by sharing your farm link",
@@ -4132,7 +4132,7 @@
   "skill.compostingRevamp.debuff": "-3 Worms",
   "npcDialogues.sheep.intro3": "Oh, you received a gift for today, come back in {{timeLeft}} and I will give you one more gift.",
   "chores.weeklyChores": "Weekly Chores",
-  "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{seasonalTicket}}s.",
+  "chores.completeChoresToEarn": "Complete chores for Bumpkins to earn {{chapterTicket}}s.",
   "chores.lockedChore": "Lvl {{level}}",
   "chores.completed": "Completed",
   "chores.complete": "Complete",
@@ -4559,7 +4559,7 @@
   "delivery.holiday": "Locked",
   "delivery.holiday.closingSoon": "These Bumpkins are going on a holiday...Complete your orders before they leave!",
   "delivery.holiday.closed": "These Bumpkins are on holiday...Come back later!",
-  "season.codex.howToEarn.comingSoon": "Earn horseshoes from chores, deliveries and bounties!",
+  "chapter.codex.howToEarn.comingSoon": "Earn horseshoes from chores, deliveries and bounties!",
   "mailbox.whatsOn": "What's on",
   "whatsOn.bullRunBegins": "Bull Run Begins!",
   "whatsOn.animalsAndCrafting": "Animals & Crafting",
