--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -1929,9 +1929,9 @@
   "fruit.guide.one": "Buah memainkan peran penting di Tanah Bunga Matahari sebagai sumber daya berharga yang dapat dijual dengan Koin atau digunakan dalam berbagai resep dan kerajinan. Tidak seperti tanaman, petak buah memiliki kemampuan unik untuk mengisi kembali beberapa kali setelah setiap panen, menyediakan sumber buah yang berkelanjutan bagi pemain.",
   "fruit.guide.two": "Untuk menanam buah, Anda harus mendapatkan petak buah yang lebih besar, yang tersedia setelah ditingkatkan ke Petal Paradise.",
   "fruit.guide.three": "Dengan membudidayakan buah dan memasukkannya ke dalam strategi pertanian Anda, Anda dapat memaksimalkan keuntungan Anda, membuat resep lezat, dan membuka kemungkinan baru di Sunflower Land.",
-  "seasons.guide.one": "Musim di Sunflower Land membawa kegembiraan dan kesegaran ke dalam permainan, menawarkan tantangan dan peluang baru kepada pemain. Dengan setiap musim, pemain dapat menantikan berbagai barang yang dapat dikenakan dan koleksi baru, mutan musiman, dan harta langka, menciptakan pengalaman gameplay yang dinamis dan berkembang. Ini mendorong pemain untuk menyesuaikan strategi mereka dan mengeksplorasi kemungkinan baru di pertanian mereka. Selain itu, tiket musiman menambahkan elemen strategis ke dalam permainan. pemain harus memutuskan bagaimana mengalokasikan tiket mereka dengan bijak, apakah itu mengumpulkan barang-barang langka, memilih dekorasi dan kosmetik, atau menukar tiket dengan Koin. Mekanik musiman membuat permainan tetap menarik dan memastikan bahwa selalu ada sesuatu yang dinanti-nantikan di Sunflower Land.",
-  "seasons.guide.two": "Ketersediaan barang yang dapat dikenakan dan koleksi musiman di Stella's Mega Store, Rumah Lelang, dan toko Jafar menambah lapisan kegembiraan lain ke Sunflower Land. Pemain harus mengumpulkan tiket musiman, harta karun, dan persyaratan khusus lainnya untuk membuat barang-barang musiman ini atau menawarnya di lelang, menumbuhkan rasa persaingan dan urgensi. Perencanaan ke depan dan menyusun strategi menjadi penting karena pemain bertujuan untuk mengamankan item yang mereka inginkan sebelum waktu habis.",
-  "seasons.guide.three": "Dengan penawaran unik setiap musim dan antisipasi acara kejutan, Sunflower Land membuat pemain tetap terlibat dan terhibur sepanjang tahun, menciptakan pengalaman bertani yang dinamis dan terus berkembang.",
+  "chapters.guide.one": "Musim di Sunflower Land membawa kegembiraan dan kesegaran ke dalam permainan, menawarkan tantangan dan peluang baru kepada pemain. Dengan setiap musim, pemain dapat menantikan berbagai barang yang dapat dikenakan dan koleksi baru, mutan musiman, dan harta langka, menciptakan pengalaman gameplay yang dinamis dan berkembang. Ini mendorong pemain untuk menyesuaikan strategi mereka dan mengeksplorasi kemungkinan baru di pertanian mereka. Selain itu, tiket musiman menambahkan elemen strategis ke dalam permainan. pemain harus memutuskan bagaimana mengalokasikan tiket mereka dengan bijak, apakah itu mengumpulkan barang-barang langka, memilih dekorasi dan kosmetik, atau menukar tiket dengan Koin. Mekanik musiman membuat permainan tetap menarik dan memastikan bahwa selalu ada sesuatu yang dinanti-nantikan di Sunflower Land.",
+  "chapters.guide.two": "Ketersediaan barang yang dapat dikenakan dan koleksi musiman di Stella's Mega Store, Rumah Lelang, dan toko Jafar menambah lapisan kegembiraan lain ke Sunflower Land. Pemain harus mengumpulkan tiket musiman, harta karun, dan persyaratan khusus lainnya untuk membuat barang-barang musiman ini atau menawarnya di lelang, menumbuhkan rasa persaingan dan urgensi. Perencanaan ke depan dan menyusun strategi menjadi penting karena pemain bertujuan untuk mengamankan item yang mereka inginkan sebelum waktu habis.",
+  "chapters.guide.three": "Dengan penawaran unik setiap musim dan antisipasi acara kejutan, Sunflower Land membuat pemain tetap terlibat dan terhibur sepanjang tahun, menciptakan pengalaman bertani yang dinamis dan terus berkembang.",
   "pete.teaser.one": "Potong pohon",
   "pete.teaser.three": "Panen Bunga Matahari",
   "pete.teaser.four": "Jual Bunga Matahari",
@@ -1946,7 +1946,7 @@
   "harvestflower.notReady": "Bunga belum siap dipanen",
   "harvestflower.alr.plant": "Bunga sudah ditanam",
   "hayseedHankv2.dialog1": "Nah, halo, whippersnappers muda! Aku Hayseed Hank, petani Bumpkin tua yang berpengalaman, merawat tanah seperti di masa lalu.",
-  "hayseedHankv2.dialog2": "Namun, tulang-tulangku tidak seperti dulu. Jika Anda dapat membantu saya dengan pekerjaan sehari-hari saya, saya akan memberi Anda hadiah {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Namun, tulang-tulangku tidak seperti dulu. Jika Anda dapat membantu saya dengan pekerjaan sehari-hari saya, saya akan memberi Anda hadiah {{chapterTicket}}.",
   "hayseedHankv2.action": "Mari kita lakukan",
   "hayseedHankv2.title": "Tugas Harian Hank",
   "hayseedHankv2.newChoresAvailable": "Tugas baru: {{timeLeft}}",
@@ -2926,18 +2926,18 @@
   "season.lifetime.farmer": "Petani Seumur Hidup",
   "season.free.with.lifetime": "Gratis dengan Petani Seumur Hidup",
   "season.ticket.bonus": "+2 {{item}} s (pengiriman & tugas)",
-  "season.codex.intro": "Dapatkan {{ticket}} s untuk membuat koleksi eksklusif & pakaian yang dapat dikenakan untuk pertanian Anda di musim terbatas ini... Cepat sebelum waktu habis!",
-  "season.codex.howToEarn": "Bagaimana cara mendapatkan {{ticket}} s?",
-  "season.codex.howToEarn.one": "Kunjungi plaza & kirimkan sumber daya ke Bumpkins.",
-  "season.codex.nextDrop": "Jatuh Berikutnya",
-  "season.codex.seasonalDrops": "Penurunan Musiman",
-  "season.codex.seasonalDrops.description": "Bersaing dengan orang lain untuk item paling langka! Kunjungi Lelang di plaza untuk lebih jelasnya.",
-  "season.codex.soldOut": "Habis terjual",
-  "season.codex.mutants": "Mutan",
-  "season.codex.mutants.discover": "Temukan mutan musiman!",
-  "season.codex.mutants.one": "Kumpulkan telur untuk menemukan {{item}}.",
-  "season.codex.mutants.two": "Ikan di kedalaman untuk {{item}}.",
-  "season.codex.mutants.three": "Bereksperimenlah dengan bunga untuk menemukan {{item}}.",
+  "chapter.codex.intro": "Dapatkan {{ticket}} s untuk membuat koleksi eksklusif & pakaian yang dapat dikenakan untuk pertanian Anda di musim terbatas ini... Cepat sebelum waktu habis!",
+  "chapter.codex.howToEarn": "Bagaimana cara mendapatkan {{ticket}} s?",
+  "chapter.codex.howToEarn.one": "Kunjungi plaza & kirimkan sumber daya ke Bumpkins.",
+  "chapter.codex.nextDrop": "Jatuh Berikutnya",
+  "chapter.codex.chapterDrops": "Penurunan Musiman",
+  "chapter.codex.chapterDrops.description": "Bersaing dengan orang lain untuk item paling langka! Kunjungi Lelang di plaza untuk lebih jelasnya.",
+  "chapter.codex.soldOut": "Habis terjual",
+  "chapter.codex.mutants": "Mutan",
+  "chapter.codex.mutants.discover": "Temukan mutan musiman!",
+  "chapter.codex.mutants.one": "Kumpulkan telur untuk menemukan {{item}}.",
+  "chapter.codex.mutants.two": "Ikan di kedalaman untuk {{item}}.",
+  "chapter.codex.mutants.three": "Bereksperimenlah dengan bunga untuk menemukan {{item}}.",
   "share.TweetText": "Kunjungi Peternakan Tanah Bunga Matahari Saya",
   "share.ShareYourFarmLink": "Bagikan Tautan Pertanian Anda",
   "share.ShowOffToFarmers": "Pamerkan kepada sesama petani dengan membagikan tautan pertanian Anda",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "Musim ini memiliki pencarian menarik, koleksi langka, dan pakaian eksklusif yang bisa Anda peroleh.",
   "birdieplaza.craftItems": "Untuk mendapatkan barang-barang langka ini, Anda harus mengumpulkan {{seasonalTicket}} s dan menukarnya di Stella's Megastore atau menawar di Rumah Lelang.",
   "reward.streak.oneYear": "Hadiah beruntun 365 hari",
-  "season.codex.nextDrop.available": "{{dropSupply}} tersedia",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} tersedia",
   "description.hoot.boost": "+0,5 Gandum, Lobak, Kangkung, Beras, Barley",
   "description.barley": "Barley adalah biji-bijian sereal bergizi yang digunakan dalam pakan ternak.",
   "gems.speedUp": "Mempercepat",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Bumpkins tidak menghargai anyelir kuning.",
   "noBumpkin.bumpkinHelp": "Anda membutuhkan Bumpkin untuk membantu Anda menanam, memanen, memotong, menambang, dan memperluas tanah Anda. Dukungan akan segera hadir untuk menambahkan Bumpkin!",
   "chores.weeklyChores": "Tugas Mingguan",
-  "chores.completeChoresToEarn": "Selesaikan tugas untuk Bumpkins untuk mendapatkan {{seasonalTicket}} s.",
+  "chores.completeChoresToEarn": "Selesaikan tugas untuk Bumpkins untuk mendapatkan {{chapterTicket}}s.",
   "chores.lockedChore": "Tingkat {{level}}",
   "chores.completed": "Selesai",
   "chores.complete": "Lengkap",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 Produk Hewan",
   "description.chicken.coop": "Kandang ayam yang bisa digunakan untuk memelihara ayam. Tingkatkan produksi telur dengan kandang langka ini.",
   "description.gold.egg": "Telur emas. Apa yang ada di dalamnya dikenal sebagai pembawa keberuntungan.",
-  "season.codex.howToEarn.two": "Selesaikan tugas untuk Bumpkins. (11 November)",
-  "season.codex.howToEarn.three": "Perdagangkan hadiah hewan dan bunga! (11 November)",
+  "chapter.codex.howToEarn.two": "Selesaikan tugas untuk Bumpkins. (11 November)",
+  "chapter.codex.howToEarn.three": "Perdagangkan hadiah hewan dan bunga! (11 November)",
   "description.cowboyHat.boost": "+1 Horseshoes",
   "description.cowboyShirt.boost": "+1 Horseshoes",
   "description.cowboyTrouser.boost": "+1 Horseshoes",
-  "season.codex.howToEarn.comingSoon": "Dapatkan sepatu kuda dari pekerjaan rumah, pengiriman, dan hadiah!",
+  "chapter.codex.howToEarn.comingSoon": "Dapatkan sepatu kuda dari pekerjaan rumah, pengiriman, dan hadiah!",
   "description.cropCircle": "Lingkaran misterius yang muncul di pertanian Anda... apa artinya?",
   "description.omnifeed": "Bertindak sebagai pakan terbaik untuk semua hewan.",
   "description.brush": "Sikat Hewan. Gunakan ini untuk menunjukkan kasih sayang kepada hewan Anda.",
