--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -1911,7 +1911,7 @@
   "harvestflower.notReady": "Il fiore non è pronto per la raccolta",
   "harvestflower.alr.plant": "Il fiore è già piantato",
   "hayseedHankv2.dialog1": "Bene, salve, giovani whippersnappers! Sono Hayseed Hank, un vecchio agricoltore esperto che coltiva la terra come ai vecchi tempi.",
-  "hayseedHankv2.dialog2": "Tuttavia, le mie ossa non sono più quelle di una volta. Se puoi aiutarmi con le mie faccende quotidiane, ti ricompenserò con {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Tuttavia, le mie ossa non sono più quelle di una volta. Se puoi aiutarmi con le mie faccende quotidiane, ti ricompenserò con {{chapterTicket}}.",
   "hayseedHankv2.action": "Facciamolo",
   "hayseedHankv2.title": "Le faccende quotidiane di Hank",
   "hayseedHankv2.newChoresAvailable": "Nuove faccende: {{timeLeft}}",
@@ -2884,18 +2884,18 @@
   "season.lifetime.farmer": "Agricoltore a vita",
   "season.free.with.lifetime": "Gratuito con Lifetime Farmer",
   "season.ticket.bonus": "+2 {{item}} s (consegne e lavorazioni)",
-  "season.codex.intro": "Guadagna {{ticket}} s per creare oggetti da collezione e indossabili esclusivi per la tua fattoria in questa stagione limitata... Affrettati prima che scada il tempo!",
-  "season.codex.howToEarn": "Come guadagnare {{ticket}} s?",
-  "season.codex.howToEarn.one": "Visita la piazza e consegna risorse a Bumpkins.",
-  "season.codex.nextDrop": "Prossima goccia",
-  "season.codex.seasonalDrops": "Gocce stagionali",
-  "season.codex.seasonalDrops.description": "Competi con gli altri per gli oggetti più rari! Visita il banditore in piazza per maggiori dettagli.",
-  "season.codex.soldOut": "Esaurito",
-  "season.codex.mutants": "Mutanti",
-  "season.codex.mutants.discover": "Scopri i mutanti stagionali!",
-  "season.codex.mutants.one": "Raccogli le uova per scoprire {{item}}.",
-  "season.codex.mutants.two": "Pesca nelle profondità per {{item}}.",
-  "season.codex.mutants.three": "Sperimenta con i fiori per scoprire {{item}}.",
+  "chapter.codex.intro": "Guadagna {{ticket}} s per creare oggetti da collezione e indossabili esclusivi per la tua fattoria in questa stagione limitata... Affrettati prima che scada il tempo!",
+  "chapter.codex.howToEarn": "Come guadagnare {{ticket}} s?",
+  "chapter.codex.howToEarn.one": "Visita la piazza e consegna risorse a Bumpkins.",
+  "chapter.codex.nextDrop": "Prossima goccia",
+  "chapter.codex.chapterDrops": "Gocce stagionali",
+  "chapter.codex.chapterDrops.description": "Competi con gli altri per gli oggetti più rari! Visita il banditore in piazza per maggiori dettagli.",
+  "chapter.codex.soldOut": "Esaurito",
+  "chapter.codex.mutants": "Mutanti",
+  "chapter.codex.mutants.discover": "Scopri i mutanti stagionali!",
+  "chapter.codex.mutants.one": "Raccogli le uova per scoprire {{item}}.",
+  "chapter.codex.mutants.two": "Pesca nelle profondità per {{item}}.",
+  "chapter.codex.mutants.three": "Sperimenta con i fiori per scoprire {{item}}.",
   "share.TweetText": "Visita My Sunflower Land Farm",
   "share.ShareYourFarmLink": "Condividi il link della tua fattoria",
   "share.ShowOffToFarmers": "Mostralo agli altri agricoltori condividendo il link della tua azienda",
@@ -3410,15 +3410,15 @@
   "scavenger.guide.one": "Scavenging in Sunflower Land offre interessanti opportunità per scoprire tesori nascosti e creare oggetti di valore. Il primo aspetto dello scavenging consiste nello scavare alla ricerca di tesori nell'area di scavo, dove puoi diventare un cacciatore di tesori pirata. Avventurandoti in quest'area, che si trova a nord della spiaggia, e fabbricando una pala da sabbia o una perforatrice nel negozio di Jafar, puoi scavare nei punti sabbiosi per scoprire una varietà di tesori.",
   "scavenger.guide.two": "Un'altra forma di raccolta prevede la raccolta di funghi selvatici e magici che compaiono spontaneamente nella tua fattoria e nelle isole circostanti. Questi funghi possono essere raccolti gratuitamente e utilizzati in ricette, missioni e oggetti artigianali. Tieni d'occhio questi funghi, poiché si rigenerano a intervalli diversi. I funghi selvatici si riforniscono ogni 16 ore, con un limite massimo di 5 funghi presenti nella tua fattoria. I funghi magici si riforniscono ogni 48 ore su Beginner Island, ogni 36 ore su Petal Paradise e ogni 24 ore su Desert Island, con un limite massimo di 3 funghi nella tua fattoria. Se la tua terra è piena, compariranno funghi sulle isole circostanti, così non perderai queste preziose risorse.",
   "fruit.guide.two": "Per piantare frutti, dovrai acquistare appezzamenti di frutta più grandi, che diventano disponibili dopo l'aggiornamento a Petal Paradise.",
-  "seasons.guide.one": "Le stagioni di Sunflower Land portano entusiasmo e freschezza al gioco, offrendo ai giocatori nuove sfide e opportunità. Con ogni stagione, i giocatori possono aspettarsi una varietà di nuovi dispositivi indossabili e da collezione, mutanti stagionali e tesori rari, che daranno vita a un'esperienza di gioco dinamica e in continua evoluzione. Questo incoraggia i giocatori ad adattare le proprie strategie ed esplorare nuove possibilità nelle proprie fattorie. Inoltre, i biglietti stagionali aggiungono un elemento strategico al gioco. I giocatori devono decidere come allocare i propri biglietti con saggezza, che si tratti di raccogliere oggetti rari, optare per decorazioni e cosmetici o scambiare i biglietti con monete. La meccanica stagionale mantiene il gioco coinvolgente e assicura che ci sia sempre qualcosa da aspettarsi in Sunflower Land.",
+  "chapters.guide.one": "Le stagioni di Sunflower Land portano entusiasmo e freschezza al gioco, offrendo ai giocatori nuove sfide e opportunità. Con ogni stagione, i giocatori possono aspettarsi una varietà di nuovi dispositivi indossabili e da collezione, mutanti stagionali e tesori rari, che daranno vita a un'esperienza di gioco dinamica e in continua evoluzione. Questo incoraggia i giocatori ad adattare le proprie strategie ed esplorare nuove possibilità nelle proprie fattorie. Inoltre, i biglietti stagionali aggiungono un elemento strategico al gioco. I giocatori devono decidere come allocare i propri biglietti con saggezza, che si tratti di raccogliere oggetti rari, optare per decorazioni e cosmetici o scambiare i biglietti con monete. La meccanica stagionale mantiene il gioco coinvolgente e assicura che ci sia sempre qualcosa da aspettarsi in Sunflower Land.",
   "keys": "Chiavi",
   "seasonedFarmer.description": "Raccogli 50 biglietti stagionali",
   "crops.guide.two": "Per coltivare i raccolti, devi acquistare i rispettivi semi dal mercato di Betty. Ogni coltura ha un tempo di crescita diverso, che va da solo 1 minuto per i girasoli a 36 ore per il cavolo riccio. Una volta che i raccolti sono completamente cresciuti, puoi raccoglierli e raccogliere i frutti.",
   "cooking.guide.four": "Una volta che il cibo è pronto, recuperalo dall'edificio facendo clic su di esso e spostandolo nel tuo inventario. Quindi puoi interagire con il tuo NPC Bumpkin vicino alla tenda o alla casa della fattoria e dar loro da mangiare il cibo preparato, aiutandolo a guadagnare XP e a progredire ulteriormente nel gioco.",
   "deliveries.guide.two": "Come nuovo giocatore, inizi con alcuni ordini, ma man mano che sali di livello, sbloccherai ordini aggiuntivi. In questo modo, i giocatori esperti possono completare più ordini. I nuovi ordini arrivano ogni 24 ore e comprendono una serie di richieste riguardanti alimenti, risorse, fiori, ecc. Completando gli ordini otterrai monete, SFL o biglietti stagionali.",
   "deliveries.guide.three": "Gli agricoltori possono migliorare la loro amicizia con determinati NPC completando le consegne. Inoltre, regalare loro dei fiori rafforzerà ulteriormente l'amicizia. Quando la barra dell'amicizia sarà piena, l'NPC ti ricompenserà con un regalo. Tieni d'occhio il Codex e mettiti alla prova con una serie di ordini, salendo di livello e sbloccando nuovi edifici se necessario per soddisfare le richieste più impegnative.",
-  "seasons.guide.two": "La disponibilità di oggetti indossabili e da collezione stagionali presso Stella's Mega Store, la Casa d'Aste e il negozio di Jafar aggiunge un altro livello di entusiasmo a Sunflower Land. I giocatori devono procurarsi biglietti stagionali, tesori e altri requisiti specifici per creare questi oggetti stagionali o fare offerte alle aste, suscitando un senso di competizione e urgenza. La pianificazione anticipata e la definizione di strategie diventano cruciali poiché i giocatori mirano ad assicurarsi gli oggetti desiderati prima che scada il tempo.",
-  "seasons.guide.three": "Con le offerte uniche di ogni stagione e l'anticipazione di eventi a sorpresa, Sunflower Land mantiene i giocatori impegnati e intrattenuti durante tutto l'anno, creando un'esperienza agricola vivace e in continua evoluzione.",
+  "chapters.guide.two": "La disponibilità di oggetti indossabili e da collezione stagionali presso Stella's Mega Store, la Casa d'Aste e il negozio di Jafar aggiunge un altro livello di entusiasmo a Sunflower Land. I giocatori devono procurarsi biglietti stagionali, tesori e altri requisiti specifici per creare questi oggetti stagionali o fare offerte alle aste, suscitando un senso di competizione e urgenza. La pianificazione anticipata e la definizione di strategie diventano cruciali poiché i giocatori mirano ad assicurarsi gli oggetti desiderati prima che scada il tempo.",
+  "chapters.guide.three": "Con le offerte uniche di ogni stagione e l'anticipazione di eventi a sorpresa, Sunflower Land mantiene i giocatori impegnati e intrattenuti durante tutto l'anno, creando un'esperienza agricola vivace e in continua evoluzione.",
   "description.gift.giver.boost": "Regala un regalo ai giocatori",
   "description.halo.boost": "Accesso agli strumenti di modifica",
   "keys.dailyLimit": "Limite giornaliero: {{keysAmountBoughtToday}} /1",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "Questa stagione offre missioni entusiasmanti, rari oggetti da collezione e dispositivi indossabili esclusivi che puoi guadagnare.",
   "birdieplaza.craftItems": "Per ottenere questi oggetti rari, devi raccogliere {{seasonalTicket}} e cambiarli allo Stella's Megastore o fare un'offerta presso la Casa d'Aste.",
   "reward.streak.oneYear": "Premi per una serie di 365 giorni",
-  "season.codex.nextDrop.available": "{{dropSupply}} disponibile",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} disponibile",
   "description.hoot.boost": "+0,5 frumento, ravanello, cavolo riccio, riso, orzo",
   "description.barley": "L'orzo è un cereale nutriente utilizzato nell'alimentazione animale.",
   "gems.speedUp": "Accelerare",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Le zucche non apprezzano il garofano giallo.",
   "noBumpkin.bumpkinHelp": "Hai bisogno di un Bumpkin per aiutarti a piantare, raccogliere, tagliare, estrarre ed espandere la tua terra. Presto sarà disponibile il supporto per aggiungere un Bumpkin!",
   "chores.weeklyChores": "Lavori settimanali",
-  "chores.completeChoresToEarn": "Completa le faccende per far guadagnare {{seasonalTicket}} a Bumpkins.",
+  "chores.completeChoresToEarn": "Completa le faccende per far guadagnare {{chapterTicket}}s a Bumpkins.",
   "chores.lockedChore": "Livello {{level}}",
   "chores.completed": "Completato",
   "chores.complete": "Completo",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0,1 Prodotti di origine animale",
   "description.chicken.coop": "Un pollaio che può essere utilizzato per allevare polli. Aumenta la produzione di uova con questo raro pollaio.",
   "description.gold.egg": "Un uovo dorato. Ciò che c'è dentro è noto per essere portatore di buona fortuna.",
-  "season.codex.howToEarn.two": "Faccende complete per Bumpkins. (11 novembre)",
-  "season.codex.howToEarn.three": "Scambia ricompense per animali e fiori! (11 novembre)",
+  "chapter.codex.howToEarn.two": "Faccende complete per Bumpkins. (11 novembre)",
+  "chapter.codex.howToEarn.three": "Scambia ricompense per animali e fiori! (11 novembre)",
   "description.cowboyHat.boost": "+1 Ferri di cavallo",
   "description.cowboyShirt.boost": "+1 Ferri di cavallo",
   "description.cowboyTrouser.boost": "+1 Ferri di cavallo",
-  "season.codex.howToEarn.comingSoon": "Guadagna ferri di cavallo con faccende domestiche, consegne e ricompense!",
+  "chapter.codex.howToEarn.comingSoon": "Guadagna ferri di cavallo con faccende domestiche, consegne e ricompense!",
   "description.cropCircle": "Un cerchio misterioso che appare nella tua fattoria... cosa potrebbe significare?",
   "description.omnifeed": "Agisce come il miglior mangime per tutti gli animali.",
   "description.brush": "Spazzola per animali. Usalo per mostrare affetto ai tuoi animali.",
