--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -1929,9 +1929,9 @@
   "fruit.guide.one": "フルーツは、サンフラワーランドでコインとして売ったり、さまざまなレシピやクラフトに利用したりできる貴重な資源として重要な役割を果たしています。農作物とは異なり、フルーツパッチは収穫のたびに何度も補充できるユニークな機能を備えているため、プレイヤーにとって持続可能なフルーツの供給源となります。",
   "fruit.guide.two": "果物を植えるには、ペタルパラダイスにアップグレードすると入手可能になる大きなフルーツパッチを入手する必要があります。",
   "fruit.guide.three": "果物を栽培して農業戦略に取り入れることで、利益を最大化し、おいしいレシピを作成し、ひまわりランドの新しい可能性を開拓することができます。",
-  "seasons.guide.one": "サンフラワーランドのシーズンは、ゲームに興奮と新鮮さをもたらし、プレイヤーに新たな挑戦と機会をもたらします。シーズンごとに、プレイヤーはさまざまな新しいウェアラブルや収集品、季節のミュータント、珍しい宝物を楽しみにすることができ、ダイナミックで進化するゲームプレイ体験を生み出します。これにより、プレイヤーは戦略を適応させ、農場で新しい可能性を探求するようになります。さらに、季節限定チケットはゲームに戦略的な要素を追加します。プレイヤーは、レアアイテムの収集、装飾品や装飾品の選択、チケットのコインへの交換など、チケットを賢く配分する方法を決めなければなりません。シーズンメカニックはゲームを飽きさせず、ひまわりランドには常に何か楽しみがあるようにしています。",
-  "seasons.guide.two": "Stella's Mega Store、オークションハウス、Jafar's Shopで季節限定のウェアラブルや収集品が手に入ることは、サンフラワーランドをさらに盛り上げています。プレイヤーはシーズンチケットや宝物、その他の特定の条件を集めてシーズンアイテムを作ったり、オークションで入札したりして、競争心と切迫感を醸成する必要があります。時間がなくなる前に欲しいアイテムを手に入れることを目指すプレイヤーにとって、事前の計画と戦略が重要になります。",
-  "seasons.guide.three": "サンフラワーランドでは、シーズンごとにユニークな商品やサプライズイベントが予定されており、年間を通じてプレイヤーの関心と楽しさを維持し、活気に満ちた進化し続ける農業体験を生み出しています。",
+  "chapters.guide.one": "サンフラワーランドのシーズンは、ゲームに興奮と新鮮さをもたらし、プレイヤーに新たな挑戦と機会をもたらします。シーズンごとに、プレイヤーはさまざまな新しいウェアラブルや収集品、季節のミュータント、珍しい宝物を楽しみにすることができ、ダイナミックで進化するゲームプレイ体験を生み出します。これにより、プレイヤーは戦略を適応させ、農場で新しい可能性を探求するようになります。さらに、季節限定チケットはゲームに戦略的な要素を追加します。プレイヤーは、レアアイテムの収集、装飾品や装飾品の選択、チケットのコインへの交換など、チケットを賢く配分する方法を決めなければなりません。シーズンメカニックはゲームを飽きさせず、ひまわりランドには常に何か楽しみがあるようにしています。",
+  "chapters.guide.two": "Stella's Mega Store、オークションハウス、Jafar's Shopで季節限定のウェアラブルや収集品が手に入ることは、サンフラワーランドをさらに盛り上げています。プレイヤーはシーズンチケットや宝物、その他の特定の条件を集めてシーズンアイテムを作ったり、オークションで入札したりして、競争心と切迫感を醸成する必要があります。時間がなくなる前に欲しいアイテムを手に入れることを目指すプレイヤーにとって、事前の計画と戦略が重要になります。",
+  "chapters.guide.three": "サンフラワーランドでは、シーズンごとにユニークな商品やサプライズイベントが予定されており、年間を通じてプレイヤーの関心と楽しさを維持し、活気に満ちた進化し続ける農業体験を生み出しています。",
   "pete.teaser.one": "木を切り刻む",
   "pete.teaser.three": "ひまわりを収穫する",
   "pete.teaser.four": "ひまわりを売ろう",
@@ -1946,7 +1946,7 @@
   "harvestflower.notReady": "花は収穫の準備ができていません",
   "harvestflower.alr.plant": "花はすでに植えられています",
   "hayseedHankv2.dialog1": "やあ、やあ、若いウィッパースナッパーズ！私はヘイシード・ハンクです。昔ながらのバンプキン農家のベテランで、古き良き時代のように土地の世話をしています。",
-  "hayseedHankv2.dialog2": "しかし、私の骨は昔のようにはいきません。日頃の雑用を手伝ってもらえたら、{{seasonalTicket}} で報酬をあげます。",
+  "hayseedHankv2.dialog2": "しかし、私の骨は昔のようにはいきません。日頃の雑用を手伝ってもらえたら、{{chapterTicket}} で報酬をあげます。",
   "hayseedHankv2.action": "やってみよう",
   "hayseedHankv2.title": "ハンクの日常雑用",
   "hayseedHankv2.newChoresAvailable": "新しい雑用:{{timeLeft}}",
@@ -2926,18 +2926,18 @@
   "season.lifetime.farmer": "ライフタイム・ファーマー",
   "season.free.with.lifetime": "ライフタイムファーマーで無料",
   "season.ticket.bonus": "+ {{item}} (配送と雑用)",
-  "season.codex.intro": "この限定シーズンに {{ticket}} を獲得して、農場限定の収集品やウェアラブルを作ってください... 時間がなくなる前に急いでください！",
-  "season.codex.howToEarn": "{{ticket}} sを稼ぐにはどうすればいいですか？",
-  "season.codex.howToEarn.one": "広場を訪れ、バンプキンズに資源を届けてください。",
-  "season.codex.nextDrop": "ネクストドロップ",
-  "season.codex.seasonalDrops": "シーズンドロップ",
-  "season.codex.seasonalDrops.description": "他の人と競い合って、最も希少なアイテムを手に入れましょう！詳細については、広場の競売人を訪ねてください。",
-  "season.codex.soldOut": "売り切れ",
-  "season.codex.mutants": "ミュータント",
-  "season.codex.mutants.discover": "季節のミュータントを発見しよう！",
-  "season.codex.mutants.one": "卵を集めて {{item}} を見つけましょう。",
-  "season.codex.mutants.two": "{{item}} を求めて深海で魚を釣ってください。",
-  "season.codex.mutants.three": "花を試して {{item}} を見つけてください。",
+  "chapter.codex.intro": "この限定シーズンに {{ticket}} を獲得して、農場限定の収集品やウェアラブルを作ってください... 時間がなくなる前に急いでください！",
+  "chapter.codex.howToEarn": "{{ticket}} sを稼ぐにはどうすればいいですか？",
+  "chapter.codex.howToEarn.one": "広場を訪れ、バンプキンズに資源を届けてください。",
+  "chapter.codex.nextDrop": "ネクストドロップ",
+  "chapter.codex.chapterDrops": "シーズンドロップ",
+  "chapter.codex.chapterDrops.description": "他の人と競い合って、最も希少なアイテムを手に入れましょう！詳細については、広場の競売人を訪ねてください。",
+  "chapter.codex.soldOut": "売り切れ",
+  "chapter.codex.mutants": "ミュータント",
+  "chapter.codex.mutants.discover": "季節のミュータントを発見しよう！",
+  "chapter.codex.mutants.one": "卵を集めて {{item}} を見つけましょう。",
+  "chapter.codex.mutants.two": "{{item}} を求めて深海で魚を釣ってください。",
+  "chapter.codex.mutants.three": "花を試して {{item}} を見つけてください。",
   "share.TweetText": "マイ・サンフラワー・ランド・ファームを訪ねる",
   "share.ShareYourFarmLink": "ファームリンクを共有",
   "share.ShowOffToFarmers": "農場のリンクを共有して、他の農家に見せびらかしましょう",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "今シーズンには、エキサイティングなクエスト、レアな収集品、限定ウェアラブルが手に入ります。",
   "birdieplaza.craftItems": "これらのレアアイテムを入手するには、{{seasonalTicket}} を集めてステラのメガストアで交換するか、オークションハウスで入札する必要があります。",
   "reward.streak.oneYear": "365 日連続リワード",
-  "season.codex.nextDrop.available": "{{dropSupply}} ご利用可能",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} ご利用可能",
   "description.hoot.boost": "+0.5 小麦、大根、ケール、米、大麦",
   "description.barley": "大麦は動物飼料に使用される栄養価の高い穀物です。",
   "gems.speedUp": "スピードアップ",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "バンプキンは黄色いカーネーションを大切にしません。",
   "noBumpkin.bumpkinHelp": "土地を植えたり、収穫したり、切り刻んだり、掘ったり、土地を広げたりするには、バンプキンが必要です。バンプキンを追加するためのサポートが間もなく開始されます！",
   "chores.weeklyChores": "ウィークリー雑用",
-  "chores.completeChoresToEarn": "バンプキンズの雑用を完了して {{seasonalTicket}} を稼ぎましょう。",
+  "chores.completeChoresToEarn": "バンプキンズの雑用を完了して {{chapterTicket}} を稼ぎましょう。",
   "chores.lockedChore": "レベル {{level}}",
   "chores.completed": "完了しました",
   "chores.complete": "完了",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 アニマル・プロデュース",
   "description.chicken.coop": "鶏の飼育に使用できる鶏小屋。この珍しい小屋で産卵量を増やしましょう。",
   "description.gold.egg": "黄金の卵。中に入っているものは幸運の持ち主として知られています。",
-  "season.codex.howToEarn.two": "バンプキンズの雑用を全部やりましょう。(11 月 11 日)",
-  "season.codex.howToEarn.three": "動物や花の賞金を交換しよう！(11月11日)",
+  "chapter.codex.howToEarn.two": "バンプキンズの雑用を全部やりましょう。(11 月 11 日)",
+  "chapter.codex.howToEarn.three": "動物や花の賞金を交換しよう！(11月11日)",
   "description.cowboyHat.boost": "+1 ホースシュー",
   "description.cowboyShirt.boost": "+1 ホースシュー",
   "description.cowboyTrouser.boost": "+1 ホースシュー",
-  "season.codex.howToEarn.comingSoon": "家事、配達、賞金で馬蹄形を稼ごう！",
+  "chapter.codex.howToEarn.comingSoon": "家事、配達、賞金で馬蹄形を稼ごう！",
   "description.cropCircle": "農場に現れる不思議なサークル... どういう意味？",
   "description.omnifeed": "すべての動物に最適な飼料として機能します。",
   "description.brush": "アニマルブラシ。これを使って動物への愛情を示しましょう。",
