--- a/src/lib/i18n/dictionaries/ko.json
+++ b/src/lib/i18n/dictionaries/ko.json
@@ -1929,9 +1929,9 @@
   "fruit.guide.one": "과일은 선플라워 랜드에서 코인으로 판매하거나 다양한 레시피와 제작에 활용할 수 있는 귀중한 자원으로서 중요한 역할을 합니다.농작물과 달리 과일 밭은 수확 후 여러 번 채울 수 있는 독특한 능력을 가지고 있어 플레이어에게 지속 가능한 과일 공급원을 제공합니다.",
   "fruit.guide.two": "과일을 심으려면 페탈 파라다이스로 업그레이드한 후 사용할 수 있는 더 큰 과일 패치를 구입해야 합니다.",
   "fruit.guide.three": "과일을 재배하고 농업 전략에 통합하면 수익을 극대화하고 맛있는 요리법을 만들고 Sunflower Land에서 새로운 가능성을 열 수 있습니다.",
-  "seasons.guide.one": "Sunflower Land의 시즌은 게임에 흥미와 신선함을 가져다 주며 플레이어에게 새로운 도전과 기회를 제공합니다.매 시즌마다 플레이어는 다양한 새로운 웨어러블 및 수집품, 시즌 뮤턴트, 희귀 보물을 기대하며 역동적이고 진화하는 게임플레이 경험을 만들 수 있습니다.이를 통해 플레이어는 전략을 조정하고 농장에서 새로운 가능성을 탐색할 수 있습니다.또한 시즌 티켓은 게임에 전략적 요소를 더합니다. 플레이어는 희귀 아이템을 수집하거나, 장식과 화장품을 선택하거나, 티켓을 코인으로 교환하는 등 티켓을 현명하게 할당하는 방법을 결정해야 합니다.시즌 메카닉은 게임을 더욱 흥미롭게 만들고 Sunflower Land에서 항상 기대되는 무언가를 찾을 수 있게 해줍니다.",
-  "seasons.guide.two": "Stella's Mega Store, 옥션 하우스, Jafar's 매장에서 시즌 한정 웨어러블과 수집품을 구입할 수 있다는 점은 선플라워 랜드에 또 다른 재미를 더합니다.플레이어는 시즌 티켓, 보물 및 기타 특정 요구 사항을 수집하여 이러한 시즌 아이템을 제작하거나 경매에 입찰해야 경쟁심과 긴박감을 조성할 수 있습니다.플레이어가 시간이 다 가기 전에 원하는 아이템을 확보하는 것을 목표로 하기 때문에 미리 계획하고 전략을 세우는 것이 매우 중요합니다.",
-  "seasons.guide.three": "Sunflower Land는 매 시즌마다 독특한 상품을 제공하고 깜짝 이벤트를 기대하며 연중 내내 플레이어의 참여와 즐거움을 유지하여 활기차고 끊임없이 진화하는 농업 경험을 제공합니다.",
+  "chapters.guide.one": "Sunflower Land의 시즌은 게임에 흥미와 신선함을 가져다 주며 플레이어에게 새로운 도전과 기회를 제공합니다.매 시즌마다 플레이어는 다양한 새로운 웨어러블 및 수집품, 시즌 뮤턴트, 희귀 보물을 기대하며 역동적이고 진화하는 게임플레이 경험을 만들 수 있습니다.이를 통해 플레이어는 전략을 조정하고 농장에서 새로운 가능성을 탐색할 수 있습니다.또한 시즌 티켓은 게임에 전략적 요소를 더합니다. 플레이어는 희귀 아이템을 수집하거나, 장식과 화장품을 선택하거나, 티켓을 코인으로 교환하는 등 티켓을 현명하게 할당하는 방법을 결정해야 합니다.시즌 메카닉은 게임을 더욱 흥미롭게 만들고 Sunflower Land에서 항상 기대되는 무언가를 찾을 수 있게 해줍니다.",
+  "chapters.guide.two": "Stella's Mega Store, 옥션 하우스, Jafar's 매장에서 시즌 한정 웨어러블과 수집품을 구입할 수 있다는 점은 선플라워 랜드에 또 다른 재미를 더합니다.플레이어는 시즌 티켓, 보물 및 기타 특정 요구 사항을 수집하여 이러한 시즌 아이템을 제작하거나 경매에 입찰해야 경쟁심과 긴박감을 조성할 수 있습니다.플레이어가 시간이 다 가기 전에 원하는 아이템을 확보하는 것을 목표로 하기 때문에 미리 계획하고 전략을 세우는 것이 매우 중요합니다.",
+  "chapters.guide.three": "Sunflower Land는 매 시즌마다 독특한 상품을 제공하고 깜짝 이벤트를 기대하며 연중 내내 플레이어의 참여와 즐거움을 유지하여 활기차고 끊임없이 진화하는 농업 경험을 제공합니다.",
   "pete.teaser.one": "나무를 잘게 썬다",
   "pete.teaser.three": "해바라기를 수확하세요",
   "pete.teaser.four": "해바라기 팔기",
@@ -1946,7 +1946,7 @@
   "harvestflower.notReady": "꽃을 수확할 준비가 되지 않았습니다",
   "harvestflower.alr.plant": "꽃은 이미 심어졌습니다",
   "hayseedHankv2.dialog1": "안녕하세요, 젊은 위퍼스내퍼들!저는 헤이시드 행크 (Hayseed Hank) 예요. 옛날처럼 땅을 가꾸는 노련한 범프킨 농부예요.",
-  "hayseedHankv2.dialog2": "하지만 내 뼈는 예전만 못하다.제가 매일 하는 집안일을 도와주시면 {{seasonalTicket}} 로 보답하겠습니다.",
+  "hayseedHankv2.dialog2": "하지만 내 뼈는 예전만 못하다.제가 매일 하는 집안일을 도와주시면 {{chapterTicket}} 로 보답하겠습니다.",
   "hayseedHankv2.action": "해봅시다",
   "hayseedHankv2.title": "행크의 일일 집안일",
   "hayseedHankv2.newChoresAvailable": "새로운 집안일: {{timeLeft}}",
@@ -2923,18 +2923,18 @@
   "season.lifetime.farmer": "라이프타임 파머",
   "season.free.with.lifetime": "라이프타임 파머와 함께라면 무료",
   "season.ticket.bonus": "+2 {{item}} s (배달 및 집안일)",
-  "season.codex.intro": "이 기간 한정 시즌에 {{ticket}} s를 적립하여 농장을 위한 독점 수집품과 웨어러블을 만드세요... 시간이 끝나기 전에 서두르세요!",
-  "season.codex.howToEarn": "{{ticket}} 를 어떻게 벌 수 있나요?",
-  "season.codex.howToEarn.one": "광장을 방문하여 범킨스에게 자원을 전달하세요.",
-  "season.codex.nextDrop": "넥스트 드롭",
-  "season.codex.seasonalDrops": "시즌 드랍",
-  "season.codex.seasonalDrops.description": "가장 희귀한 아이템을 놓고 다른 사람들과 경쟁하세요!자세한 내용은 광장에 있는 경매인을 방문하십시오.",
-  "season.codex.soldOut": "매진",
-  "season.codex.mutants": "돌연변이",
-  "season.codex.mutants.discover": "계절별 돌연변이를 발견하세요!",
-  "season.codex.mutants.one": "알을 모아 {{item}} 를 발견하세요.",
-  "season.codex.mutants.two": "{{item}} 를 위해 깊은 곳에서 낚시하세요.",
-  "season.codex.mutants.three": "꽃을 실험하여 {{item}} 를 찾아보세요.",
+  "chapter.codex.intro": "이 기간 한정 시즌에 {{ticket}} s를 적립하여 농장을 위한 독점 수집품과 웨어러블을 만드세요... 시간이 끝나기 전에 서두르세요!",
+  "chapter.codex.howToEarn": "{{ticket}} 를 어떻게 벌 수 있나요?",
+  "chapter.codex.howToEarn.one": "광장을 방문하여 범킨스에게 자원을 전달하세요.",
+  "chapter.codex.nextDrop": "넥스트 드롭",
+  "chapter.codex.chapterDrops": "시즌 드랍",
+  "chapter.codex.chapterDrops.description": "가장 희귀한 아이템을 놓고 다른 사람들과 경쟁하세요!자세한 내용은 광장에 있는 경매인을 방문하십시오.",
+  "chapter.codex.soldOut": "매진",
+  "chapter.codex.mutants": "돌연변이",
+  "chapter.codex.mutants.discover": "계절별 돌연변이를 발견하세요!",
+  "chapter.codex.mutants.one": "알을 모아 {{item}} 를 발견하세요.",
+  "chapter.codex.mutants.two": "{{item}} 를 위해 깊은 곳에서 낚시하세요.",
+  "chapter.codex.mutants.three": "꽃을 실험하여 {{item}} 를 찾아보세요.",
   "share.TweetText": "마이 선플라워 랜드 팜 방문하기",
   "share.ShareYourFarmLink": "팜 링크 공유",
   "share.ShowOffToFarmers": "농장 링크를 공유하여 동료 농부들에게 자랑하세요",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "이번 시즌에는 흥미진진한 퀘스트, 희귀 수집품, 획득할 수 있는 독점 웨어러블이 있습니다.",
   "birdieplaza.craftItems": "이러한 희귀 아이템을 얻으려면 {{seasonalTicket}} s를 모아 스텔라의 메가스토어에서 교환하거나 경매장에서 입찰해야 합니다.",
   "reward.streak.oneYear": "365일 연속 보상",
-  "season.codex.nextDrop.available": "{{dropSupply}} 사용 가능",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} 사용 가능",
   "description.hoot.boost": "+0.5 밀, 무, 케일, 쌀, 보리",
   "description.barley": "보리는 동물 사료에 사용되는 영양가 높은 곡물입니다.",
   "gems.speedUp": "스피드 업",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "범프킨은 노란 카네이션을 소중히 여기지 않아요.",
   "noBumpkin.bumpkinHelp": "땅을 심고, 수확하고, 자르고, 채굴하고, 확장하는 데 도움이 되는 범프킨이 필요합니다.범프킨 추가 지원이 곧 제공될 예정입니다!",
   "chores.weeklyChores": "주간 집안일",
-  "chores.completeChoresToEarn": "범프킨의 집안일을 완료하여 {{seasonalTicket}} 를 벌세요.",
+  "chores.completeChoresToEarn": "범프킨의 집안일을 완료하여 {{chapterTicket}} 를 벌세요.",
   "chores.lockedChore": "레벨 {{level}}",
   "chores.completed": "완료됨",
   "chores.complete": "완료",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 애니멀 프로듀스",
   "description.chicken.coop": "닭을 기르는 데 사용할 수 있는 닭장입니다.이 희귀한 닭장으로 계란 생산량을 늘리세요.",
   "description.gold.egg": "황금 달걀.안에 있는 것은 행운을 가져다주는 존재로 알려져 있습니다.",
-  "season.codex.howToEarn.two": "범프킨의 집안일을 완료하세요.(11월 11일)",
-  "season.codex.howToEarn.three": "동물과 꽃 현상금을 거래하세요!(11월 11일)",
+  "chapter.codex.howToEarn.two": "범프킨의 집안일을 완료하세요.(11월 11일)",
+  "chapter.codex.howToEarn.three": "동물과 꽃 현상금을 거래하세요!(11월 11일)",
   "description.cowboyHat.boost": "+1 호스슈즈",
   "description.cowboyShirt.boost": "+1 호스슈즈",
   "description.cowboyTrouser.boost": "+1 호스슈즈",
-  "season.codex.howToEarn.comingSoon": "집안일, 배달, 현상금으로 말굽을 획득하세요!",
+  "chapter.codex.howToEarn.comingSoon": "집안일, 배달, 현상금으로 말굽을 획득하세요!",
   "description.cropCircle": "농장에 나타난 신비한 원... 무슨 뜻일까요?",
   "description.omnifeed": "모든 동물에게 가장 좋은 사료로 작용합니다.",
   "description.brush": "애니멀 브러쉬.이 제품을 사용해 동물에게 애정을 표현하세요.",
