--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -1929,9 +1929,9 @@
   "fruit.guide.one": "Buah memainkan peranan penting dalam Tanah Bunga Matahari sebagai sumber berharga yang boleh dijual untuk Syiling atau digunakan dalam pelbagai resipi dan kerajinan. Tidak seperti tanaman, tompok buah mempunyai keupayaan unik untuk menambah beberapa kali selepas setiap penuaian, menyediakan sumber buah yang mampan untuk pemain.",
   "fruit.guide.two": "Untuk menanam buah, anda perlu memperoleh tompok buah yang lebih besar, yang tersedia selepas menaik taraf ke Petal Paradise.",
   "fruit.guide.three": "Dengan menanam buah dan memasukkannya ke dalam strategi pertanian anda, anda boleh memaksimumkan keuntungan anda, mencipta resipi lazat dan membuka kunci kemungkinan baharu di Sunflower Land.",
-  "seasons.guide.one": "Musim di Sunflower Land membawa kegembiraan dan kesegaran kepada permainan, menawarkan cabaran dan peluang baru kepada pemain. Dengan setiap musim, pemain boleh menantikan pelbagai barang pakai dan koleksi baharu, mutan bermusim dan khazanah langka, mewujudkan pengalaman permainan yang dinamik dan berkembang. Ini mendorong pemain untuk menyesuaikan strategi mereka dan meneroka kemungkinan baru di ladang mereka. Selain itu, tiket bermusim menambah elemen strategik pada permainan. pemain mesti memutuskan cara memperuntukkan tiket mereka dengan bijak, sama ada mengumpul barang-barang langka, memilih hiasan dan kosmetik, atau menukar tiket untuk Syiling. Mekanik bermusim memastikan permainan menarik dan memastikan bahawa sentiasa ada sesuatu yang boleh dinantikan di Sunflower Land.",
-  "seasons.guide.two": "Ketersediaan barang pakai dan koleksi bermusim di Stella's Mega Store, Auction House dan kedai Jafar menambah satu lagi keseronokan kepada Sunflower Land. Pemain mesti mengumpulkan tiket bermusim, khazanah, dan keperluan khusus lain untuk membuat barangan bermusim ini atau membida di lelongan, memupuk rasa persaingan dan urgensi. Merancang lebih awal dan membuat strategi menjadi penting kerana pemain berhasrat untuk mengamankan item yang mereka inginkan sebelum masa habis.",
-  "seasons.guide.three": "Dengan tawaran unik setiap musim dan jangkaan acara kejutan, Sunflower Land memastikan pemain terlibat dan dihiburkan sepanjang tahun, mewujudkan pengalaman pertanian yang bertenaga dan sentiasa berkembang.",
+  "chapters.guide.one": "Musim di Sunflower Land membawa kegembiraan dan kesegaran kepada permainan, menawarkan cabaran dan peluang baru kepada pemain. Dengan setiap musim, pemain boleh menantikan pelbagai barang pakai dan koleksi baharu, mutan bermusim dan khazanah langka, mewujudkan pengalaman permainan yang dinamik dan berkembang. Ini mendorong pemain untuk menyesuaikan strategi mereka dan meneroka kemungkinan baru di ladang mereka. Selain itu, tiket bermusim menambah elemen strategik pada permainan. pemain mesti memutuskan cara memperuntukkan tiket mereka dengan bijak, sama ada mengumpul barang-barang langka, memilih hiasan dan kosmetik, atau menukar tiket untuk Syiling. Mekanik bermusim memastikan permainan menarik dan memastikan bahawa sentiasa ada sesuatu yang boleh dinantikan di Sunflower Land.",
+  "chapters.guide.two": "Ketersediaan barang pakai dan koleksi bermusim di Stella's Mega Store, Auction House dan kedai Jafar menambah satu lagi keseronokan kepada Sunflower Land. Pemain mesti mengumpulkan tiket bermusim, khazanah, dan keperluan khusus lain untuk membuat barangan bermusim ini atau membida di lelongan, memupuk rasa persaingan dan urgensi. Merancang lebih awal dan membuat strategi menjadi penting kerana pemain berhasrat untuk mengamankan item yang mereka inginkan sebelum masa habis.",
+  "chapters.guide.three": "Dengan tawaran unik setiap musim dan jangkaan acara kejutan, Sunflower Land memastikan pemain terlibat dan dihiburkan sepanjang tahun, mewujudkan pengalaman pertanian yang bertenaga dan sentiasa berkembang.",
   "pete.teaser.one": "Potong pokok",
   "pete.teaser.three": "Tuai bunga matahari",
   "pete.teaser.four": "Jual bunga matahari",
@@ -1946,7 +1946,7 @@
   "harvestflower.notReady": "Bunga tidak siap dituai",
   "harvestflower.alr.plant": "Bunga sudah ditanam",
   "hayseedHankv2.dialog1": "Baiklah, kawan di sana, pemimpin muda! Saya Hayseed Hank, seorang petani Bumpkin lama yang berpengalaman, menjaga tanah seperti pada zaman dahulu.",
-  "hayseedHankv2.dialog2": "Namun, tulang saya bukan seperti dulu. Jika anda boleh membantu saya dengan tugas harian saya, saya akan memberi ganjaran kepada anda dengan {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Namun, tulang saya bukan seperti dulu. Jika anda boleh membantu saya dengan tugas harian saya, saya akan memberi ganjaran kepada anda dengan {{chapterTicket}}.",
   "hayseedHankv2.action": "Mari kita lakukannya",
   "hayseedHankv2.title": "Kerja Harian Hank",
   "hayseedHankv2.newChoresAvailable": "Kerja baru: {{timeLeft}}",
@@ -2926,18 +2926,18 @@
   "season.lifetime.farmer": "Petani Sepanjang Hayat",
   "season.free.with.lifetime": "Percuma dengan Lifetime Farmer",
   "season.ticket.bonus": "+2 {{item}} s (penghantaran & kerja)",
-  "season.codex.intro": "Dapatkan {{ticket}} s untuk membuat koleksi eksklusif & barang pakai untuk ladang anda pada musim terhad ini... Cepat sebelum masa habis!",
-  "season.codex.howToEarn": "Bagaimana untuk mendapatkan {{ticket}} s?",
-  "season.codex.howToEarn.one": "Lawati plaza & hantar sumber ke Bumpkins.",
-  "season.codex.nextDrop": "Drop Seterusnya",
-  "season.codex.seasonalDrops": "Titisan Bermusim",
-  "season.codex.seasonalDrops.description": "Bersaing dengan orang lain untuk barangan paling jarang! Lawati Lelong di plaza untuk maklumat lanjut.",
-  "season.codex.soldOut": "habis dijual",
-  "season.codex.mutants": "Mutan",
-  "season.codex.mutants.discover": "Temui mutan bermusim!",
-  "season.codex.mutants.one": "Kumpulkan telur untuk menemui {{item}}.",
-  "season.codex.mutants.two": "Ikan di kedalaman untuk {{item}}.",
-  "season.codex.mutants.three": "Eksperimen dengan bunga untuk menemui {{item}}.",
+  "chapter.codex.intro": "Dapatkan {{ticket}} s untuk membuat koleksi eksklusif & barang pakai untuk ladang anda pada musim terhad ini... Cepat sebelum masa habis!",
+  "chapter.codex.howToEarn": "Bagaimana untuk mendapatkan {{ticket}} s?",
+  "chapter.codex.howToEarn.one": "Lawati plaza & hantar sumber ke Bumpkins.",
+  "chapter.codex.nextDrop": "Drop Seterusnya",
+  "chapter.codex.chapterDrops": "Titisan Bermusim",
+  "chapter.codex.chapterDrops.description": "Bersaing dengan orang lain untuk barangan paling jarang! Lawati Lelong di plaza untuk maklumat lanjut.",
+  "chapter.codex.soldOut": "habis dijual",
+  "chapter.codex.mutants": "Mutan",
+  "chapter.codex.mutants.discover": "Temui mutan bermusim!",
+  "chapter.codex.mutants.one": "Kumpulkan telur untuk menemui {{item}}.",
+  "chapter.codex.mutants.two": "Ikan di kedalaman untuk {{item}}.",
+  "chapter.codex.mutants.three": "Eksperimen dengan bunga untuk menemui {{item}}.",
   "share.TweetText": "Lawati Ladang Tanah Bunga Matahari Saya",
   "share.ShareYourFarmLink": "Kongsi Pautan Ladang Anda",
   "share.ShowOffToFarmers": "Pamerkan kepada rakan petani dengan berkongsi pautan ladang anda",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "Musim ini mempunyai pencarian menarik, koleksi langka dan barang pakai eksklusif yang boleh anda perolehi.",
   "birdieplaza.craftItems": "Untuk mendapatkan barang-barang langka ini, anda mesti mengumpul {{seasonalTicket}} s dan menukarnya di Stella's Megastore atau membida di Rumah Lelongan.",
   "reward.streak.oneYear": "Ganjaran rentetan 365 hari",
-  "season.codex.nextDrop.available": "{{dropSupply}} tersedia",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} tersedia",
   "description.hoot.boost": "+0.5 Gandum, Lobak, Kale, Beras, Barli",
   "description.barley": "Barli adalah bijirin bijirin berkhasiat yang digunakan dalam makanan haiwan.",
   "gems.speedUp": "Mempercepatkan",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Bumpkins tidak menghargai anyelir kuning.",
   "noBumpkin.bumpkinHelp": "Anda memerlukan Bumpkin untuk membantu anda menanam, menuai, memotong, lombong dan mengembangkan tanah anda. Sokongan akan datang tidak lama lagi untuk menambah Bumpkin!",
   "chores.weeklyChores": "Kerja Mingguan",
-  "chores.completeChoresToEarn": "Lengkapkan tugas untuk Bumpkins memperoleh {{seasonalTicket}} s.",
+  "chores.completeChoresToEarn": "Lengkapkan tugas untuk Bumpkins memperoleh {{chapterTicket}}s.",
   "chores.lockedChore": "Lvl {{level}}",
   "chores.completed": "Selesai",
   "chores.complete": "Lengkap",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 Hasil Haiwan",
   "description.chicken.coop": "Kandang ayam yang boleh digunakan untuk membesarkan ayam. Meningkatkan pengeluaran telur dengan kandang langka ini.",
   "description.gold.egg": "Telur emas. Apa yang ada di dalamnya diketahui sebagai pembawa nasib baik.",
-  "season.codex.howToEarn.two": "Kerja lengkap untuk Bumpkins. (11 Nov)",
-  "season.codex.howToEarn.three": "Berdagang hadiah haiwan dan bunga! (11 Nov)",
+  "chapter.codex.howToEarn.two": "Kerja lengkap untuk Bumpkins. (11 Nov)",
+  "chapter.codex.howToEarn.three": "Berdagang hadiah haiwan dan bunga! (11 Nov)",
   "description.cowboyHat.boost": "+1 Horseshoes",
   "description.cowboyShirt.boost": "+1 Horseshoes",
   "description.cowboyTrouser.boost": "+1 Horseshoes",
-  "season.codex.howToEarn.comingSoon": "Dapatkan kuda dari kerja rumah, penghantaran dan hadiah!",
+  "chapter.codex.howToEarn.comingSoon": "Dapatkan kuda dari kerja rumah, penghantaran dan hadiah!",
   "description.cropCircle": "Lingkaran misteri yang muncul di ladang anda... apa maksudnya?",
   "description.omnifeed": "Bertindak sebagai makanan terbaik untuk semua haiwan.",
   "description.brush": "Berus Haiwan. Gunakan ini untuk menunjukkan kasih sayang kepada haiwan anda.",
