--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -2869,7 +2869,7 @@
   "chores.hank.intro": "Complete tarefas na fazenda para ganhar recompensas dos Bumpkins.",
   "chores.kingdom": "Tarefas do Reino",
   "chores.kingdom.intro": "Complete tarefas em sua fazenda para ganhar marcas da sua Casa de Facção",
-  "hayseedHankv2.dialog2": "No entanto, meus ossos não são mais o que costumavam ser. Se você puder me ajudar com minhas tarefas diárias, eu o recompensarei com {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "No entanto, meus ossos não são mais o que costumavam ser. Se você puder me ajudar com minhas tarefas diárias, eu o recompensarei com {{chapterTicket}}.",
   "hayseedHankv2.newChoresAvailable": "Novas tarefas: {{timeLeft}}",
   "hayseedHankv2.confirmSkipChore": "Tem certeza de que deseja pular essa tarefa?",
   "confirmation.craft": "Tem certeza de que deseja criar {{item}}?",
@@ -3143,18 +3143,18 @@
   "season.lifetime.farmer": "Fazendeiro vitalício",
   "season.free.with.lifetime": "Grátis com Lifetime Farmer",
   "season.ticket.bonus": "+2 {{item}} s (entregas e tarefas)",
-  "season.codex.intro": "Ganhe {{ticket}} s para criar itens colecionáveis e vestíveis exclusivos para sua fazenda nesta temporada limitada... Corra antes que o tempo acabe!",
-  "season.codex.howToEarn": "Como ganhar {{ticket}} s?",
-  "season.codex.howToEarn.one": "Visite a praça e entregue recursos para Bumpkins.",
-  "season.codex.nextDrop": "Próxima entrega",
-  "season.codex.seasonalDrops": "Quedas sazonais",
-  "season.codex.seasonalDrops.description": "Compita com outros pelos itens mais raros! Visite o leiloeiro na praça para obter mais detalhes.",
-  "season.codex.soldOut": "Esgotado",
-  "season.codex.mutants": "Mutantes",
-  "season.codex.mutants.discover": "Descubra os mutantes sazonais!",
-  "season.codex.mutants.one": "Colete ovos para descobrir o {{item}}.",
-  "season.codex.mutants.two": "Pesque nas profundezas em busca do {{item}}.",
-  "season.codex.mutants.three": "Experimente com flores para descobrir o {{item}}.",
+  "chapter.codex.intro": "Ganhe {{ticket}} s para criar itens colecionáveis e vestíveis exclusivos para sua fazenda nesta temporada limitada... Corra antes que o tempo acabe!",
+  "chapter.codex.howToEarn": "Como ganhar {{ticket}} s?",
+  "chapter.codex.howToEarn.one": "Visite a praça e entregue recursos para Bumpkins.",
+  "chapter.codex.nextDrop": "Próxima entrega",
+  "chapter.codex.chapterDrops": "Quedas sazonais",
+  "chapter.codex.chapterDrops.description": "Compita com outros pelos itens mais raros! Visite o leiloeiro na praça para obter mais detalhes.",
+  "chapter.codex.soldOut": "Esgotado",
+  "chapter.codex.mutants": "Mutantes",
+  "chapter.codex.mutants.discover": "Descubra os mutantes sazonais!",
+  "chapter.codex.mutants.one": "Colete ovos para descobrir o {{item}}.",
+  "chapter.codex.mutants.two": "Pesque nas profundezas em busca do {{item}}.",
+  "chapter.codex.mutants.three": "Experimente com flores para descobrir o {{item}}.",
   "sharkBumpkin.dialogue.shhhh": "Shhhh!",
   "special.event.easterIntro": "Ah não, meus 6 coelhos desapareceram novamente... eles devem estar procurando por comida. Você pode me ajudar a encontrá-los? Eles se parecem com outros coelhos, mas têm um brilho único. Clique neles para capturá-los.",
   "special.event.rabbitsMissing": "Coelhos desaparecidos",
@@ -3410,15 +3410,15 @@
   "scavenger.guide.one": "Explorar em Sunflower Land oferece oportunidades empolgantes de descobrir tesouros escondidos e criar itens valiosos. O primeiro aspecto da busca envolve cavar tesouros na área de escavação, onde você pode se tornar um caçador de tesouros pirata. Ao se aventurar nesta área, localizada ao norte da praia, e fabricar uma pá de areia ou furadeira de areia na loja de Jafar, você pode cavar pontos arenosos para descobrir uma variedade de tesouros.",
   "scavenger.guide.two": "Outra forma de coleta envolve coletar cogumelos selvagens e mágicos que aparecem espontaneamente em sua fazenda e nas ilhas vizinhas. Esses cogumelos podem ser coletados gratuitamente e usados em receitas, missões e itens de artesanato. Fique de olho nesses cogumelos, pois eles se reabastecem em intervalos diferentes. Os cogumelos silvestres são reabastecidos a cada 16 horas, com um limite máximo de 5 cogumelos em sua fazenda. Os cogumelos mágicos são reabastecidos a cada 48 horas na Ilha Iniciante, a cada 36 horas no Petal Paradise e a cada 24 horas na Ilha Deserta, com um limite máximo de 3 cogumelos em sua fazenda. Se sua terra estiver cheia, cogumelos aparecerão nas ilhas vizinhas, garantindo que você não perca esses recursos valiosos.",
   "fruit.guide.two": "Para plantar frutas, você precisará adquirir canteiros de frutas maiores, que ficam disponíveis após a atualização para o Petal Paradise.",
-  "seasons.guide.one": "As temporadas em Sunflower Land trazem emoção e frescor ao jogo, oferecendo aos jogadores novos desafios e oportunidades. A cada temporada, os jogadores podem contar com uma variedade de novos itens vestíveis e colecionáveis, mutantes sazonais e tesouros raros, criando uma experiência de jogo dinâmica e em evolução. Isso incentiva os jogadores a adaptarem suas estratégias e explorarem novas possibilidades em suas fazendas. Além disso, os ingressos sazonais adicionam um elemento estratégico ao jogo. Os jogadores devem decidir como alocar seus ingressos com sabedoria, seja coletando itens raros, optando por decorações e cosméticos ou trocando ingressos por moedas. A mecânica sazonal mantém o jogo envolvente e garante que sempre haja algo pelo que esperar em Sunflower Land.",
+  "chapters.guide.one": "As temporadas em Sunflower Land trazem emoção e frescor ao jogo, oferecendo aos jogadores novos desafios e oportunidades. A cada temporada, os jogadores podem contar com uma variedade de novos itens vestíveis e colecionáveis, mutantes sazonais e tesouros raros, criando uma experiência de jogo dinâmica e em evolução. Isso incentiva os jogadores a adaptarem suas estratégias e explorarem novas possibilidades em suas fazendas. Além disso, os ingressos sazonais adicionam um elemento estratégico ao jogo. Os jogadores devem decidir como alocar seus ingressos com sabedoria, seja coletando itens raros, optando por decorações e cosméticos ou trocando ingressos por moedas. A mecânica sazonal mantém o jogo envolvente e garante que sempre haja algo pelo que esperar em Sunflower Land.",
   "keys": "Chaves",
   "seasonedFarmer.description": "Colete 50 ingressos sazonais",
   "crops.guide.two": "Para cultivar, você precisa comprar as respectivas sementes no mercado de Betty. Cada safra tem um tempo de crescimento diferente, variando de apenas 1 minuto para girassóis a 36 horas para couve. Quando as safras estiverem totalmente crescidas, você poderá colhê-las e colher os frutos.",
   "cooking.guide.four": "Quando a comida estiver pronta, retire-a do prédio clicando nela e movendo-a para o seu inventário. Depois, você pode interagir com seu NPC Bumpkin perto da tenda ou casa na fazenda e alimentá-lo com a comida preparada, ajudando-o a ganhar XP e progredir ainda mais no jogo.",
   "deliveries.guide.two": "Como novo jogador, você começa com alguns pedidos, mas à medida que aumenta o nível do seu caipira, você desbloqueia pedidos adicionais. Dessa forma, jogadores avançados podem concluir mais pedidos. Novos pedidos chegam a cada 24 horas, oferecendo uma variedade de pedidos de alimentos, recursos, flores, etc. Completar pedidos renderá moedas, SFL ou ingressos sazonais.",
   "deliveries.guide.three": "Os agricultores podem melhorar sua amizade com certos NPCs concluindo as entregas. Além disso, presentear flores para eles aumentará ainda mais a amizade. Quando a barra de amizade estiver cheia, o NPC o recompensará com um presente. Fique de olho no Codex e desafie-se com uma variedade de pedidos, subindo de nível e desbloqueando novos edifícios conforme necessário para atender às solicitações mais exigentes.",
-  "seasons.guide.two": "A disponibilidade de itens vestíveis e colecionáveis sazonais na Stella's Mega Store, na Auction House e na loja de Jafar adiciona outra camada de emoção à Sunflower Land. Os jogadores devem reunir ingressos sazonais, tesouros e outros requisitos específicos para criar esses itens sazonais ou licitá-los em leilões, promovendo um senso de competição e urgência. Planejar com antecedência e criar estratégias se tornam cruciais, pois os jogadores buscam garantir os itens desejados antes que o tempo acabe.",
-  "seasons.guide.three": "Com as ofertas exclusivas de cada temporada e a expectativa de eventos surpresa, Sunflower Land mantém os jogadores engajados e entretidos durante todo o ano, criando uma experiência agrícola vibrante e em constante evolução.",
+  "chapters.guide.two": "A disponibilidade de itens vestíveis e colecionáveis sazonais na Stella's Mega Store, na Auction House e na loja de Jafar adiciona outra camada de emoção à Sunflower Land. Os jogadores devem reunir ingressos sazonais, tesouros e outros requisitos específicos para criar esses itens sazonais ou licitá-los em leilões, promovendo um senso de competição e urgência. Planejar com antecedência e criar estratégias se tornam cruciais, pois os jogadores buscam garantir os itens desejados antes que o tempo acabe.",
+  "chapters.guide.three": "Com as ofertas exclusivas de cada temporada e a expectativa de eventos surpresa, Sunflower Land mantém os jogadores engajados e entretidos durante todo o ano, criando uma experiência agrícola vibrante e em constante evolução.",
   "description.gift.giver.boost": "Presenteie os jogadores com um presente",
   "description.halo.boost": "Acesso às ferramentas de modificação",
   "keys.dailyLimit": "Limite diário: {{keysAmountBoughtToday}} /1",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "Esta temporada tem missões emocionantes, itens colecionáveis raros e dispositivos vestíveis exclusivos que você pode ganhar.",
   "birdieplaza.craftItems": "Para obter esses itens raros, você deve coletar {{seasonalTicket}} s e trocá-los na Stella's Megastore ou licitar na Casa de Leilões.",
   "reward.streak.oneYear": "Recompensa de sequência de 365 dias",
-  "season.codex.nextDrop.available": "{{dropSupply}} disponível",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} disponível",
   "description.hoot.boost": "+0,5 Trigo, rabanete, couve, arroz, cevada",
   "description.barley": "A cevada é um grão de cereal nutritivo usado na alimentação animal.",
   "gems.speedUp": "Acelere",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Os caipiras não valorizam o cravo amarelo.",
   "noBumpkin.bumpkinHelp": "Você precisa de um caipira para ajudá-lo a plantar, colher, cortar, minerar e expandir sua terra. O suporte estará disponível em breve para adicionar um Bumpkin!",
   "chores.weeklyChores": "Tarefas semanais",
-  "chores.completeChoresToEarn": "Complete as tarefas de Bumpkins para ganhar {{seasonalTicket}} s.",
+  "chores.completeChoresToEarn": "Complete as tarefas de Bumpkins para ganhar {{chapterTicket}}s.",
   "chores.lockedChore": "Nvel {{level}}",
   "chores.completed": "Concluído",
   "chores.complete": "Completo",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 Produtos de origem animal",
   "description.chicken.coop": "Um galinheiro que pode ser usado para criar galinhas. Aumente a produção de ovos com este galinheiro raro.",
   "description.gold.egg": "Um ovo dourado. O que está lá dentro é conhecido por ser o portador da boa sorte.",
-  "season.codex.howToEarn.two": "Complete tarefas para Bumpkins. (11 de novembro)",
-  "season.codex.howToEarn.three": "Troque recompensas por animais e flores! (11 de novembro)",
+  "chapter.codex.howToEarn.two": "Complete tarefas para Bumpkins. (11 de novembro)",
+  "chapter.codex.howToEarn.three": "Troque recompensas por animais e flores! (11 de novembro)",
   "description.cowboyHat.boost": "+1 Ferraduras",
   "description.cowboyShirt.boost": "+1 Ferraduras",
   "description.cowboyTrouser.boost": "+1 Ferraduras",
-  "season.codex.howToEarn.comingSoon": "Ganhe ferraduras com tarefas, entregas e recompensas!",
+  "chapter.codex.howToEarn.comingSoon": "Ganhe ferraduras com tarefas, entregas e recompensas!",
   "description.cropCircle": "Um círculo misterioso que aparece em sua fazenda... o que isso poderia significar?",
   "description.omnifeed": "Atua como o melhor alimento para todos os animais.",
   "description.brush": "Escova para animais. Use isso para mostrar afeto aos seus animais.",
