--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -664,7 +664,7 @@
   "chores.chopTrees": "Срубить 3 дерева",
   "chores.choresFrozen": "Скоро появится новый сезонный список дел.",
   "chores.complete": "Завершить",
-  "chores.completeChoresToEarn": "Выполняйте задания, чтобы Бампкинс зарабатывал {{seasonalTicket}} с.",
+  "chores.completeChoresToEarn": "Выполняйте задания, чтобы Бампкинс зарабатывал {{chapterTicket}}s.",
   "chores.completed": "Завершено",
   "chores.earnSflIntro": "Если ты хочешь добиться больших успехов в фермерских делах, то лучше начни с продажи Подсолнухов, покупки семян и получения прибыли.",
   "chores.ended": "Все это время я говорю Бампкинсу, что делать... Я устала. Думаю, мне нужен отпуск.",
@@ -2690,7 +2690,7 @@
   "hayseedHankv2.action": "Приступим",
   "hayseedHankv2.confirmSkipChore": "Уверен что хочешь пропустить это задание?",
   "hayseedHankv2.dialog1": "Ну здравствуй, малец! Я - Hayseed Hank, опытный фермер, ухаживающий за землей как в старые добрые времена.",
-  "hayseedHankv2.dialog2": "Однако мои кости уже не те, что прежде. Если ты поможешь мне с повседневными делами, я вознагражу тебя {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Однако мои кости уже не те, что прежде. Если ты поможешь мне с повседневными делами, я вознагражу тебя {{chapterTicket}}.",
   "hayseedHankv2.greeting": "Ну здравствуй, малец! Я - Hayseed Hank...",
   "hayseedHankv2.newChoresAvailable": "Новые дела: {{timeLeft}}",
   "hayseedHankv2.skipChores": "Пропускать задания можно на следующий день",
@@ -4246,22 +4246,22 @@
   "chapter.boostXP": "+10% Опыта от еды",
   "season.bullRun.bonus": "На 10% меньше корма для животных",
   "chapter.buyNow": "Купить сейчас",
-  "season.codex.howToEarn": "Как получить {{ticket}}?",
-  "season.codex.howToEarn.comingSoon": "Зарабатывайте подковы, выполняя работу по дому, доставками и наградами!",
-  "season.codex.howToEarn.one": "Посещай плазу и доставляй ресурсы бампкинам.",
-  "season.codex.howToEarn.three": "Торгуйте наградами за животных и цветы! (11 ноября)",
-  "season.codex.howToEarn.two": "Выполните работу по дому для Бампкинсов. (11 ноября)",
-  "season.codex.intro": "Зарабатывай {{ticket}}, чтобы создавать эксклюзивную одежду и коллекционные предметы для твоей фермы в этом сезоне...Поторопись, пока время не истекло!",
-  "season.codex.mutants": "Мутанты",
-  "season.codex.mutants.discover": "Найди сезонных мутантов!",
-  "season.codex.mutants.one": "Собирай яйца, чтобы найти {{item}}.",
-  "season.codex.mutants.three": "Экспериментируй с цветами, чтобы найти {{item}}.",
-  "season.codex.mutants.two": "Рыбачь на глубине, чтобы найти {{item}}.",
-  "season.codex.nextDrop": "Следующий аукцион",
-  "season.codex.nextDrop.available": "{{dropSupply}} доступно",
-  "season.codex.seasonalDrops": "Сезонные аукционы",
-  "season.codex.seasonalDrops.description": "Соревнуйся с другими игроками за самые редкие предметы! За подробностями обращайся к Auctioneer на плазе.",
-  "season.codex.soldOut": "Расродано",
+  "chapter.codex.howToEarn": "Как получить {{ticket}}?",
+  "chapter.codex.howToEarn.comingSoon": "Зарабатывайте подковы, выполняя работу по дому, доставками и наградами!",
+  "chapter.codex.howToEarn.one": "Посещай плазу и доставляй ресурсы бампкинам.",
+  "chapter.codex.howToEarn.three": "Торгуйте наградами за животных и цветы! (11 ноября)",
+  "chapter.codex.howToEarn.two": "Выполните работу по дому для Бампкинсов. (11 ноября)",
+  "chapter.codex.intro": "Зарабатывай {{ticket}}, чтобы создавать эксклюзивную одежду и коллекционные предметы для твоей фермы в этом сезоне...Поторопись, пока время не истекло!",
+  "chapter.codex.mutants": "Мутанты",
+  "chapter.codex.mutants.discover": "Найди сезонных мутантов!",
+  "chapter.codex.mutants.one": "Собирай яйца, чтобы найти {{item}}.",
+  "chapter.codex.mutants.three": "Экспериментируй с цветами, чтобы найти {{item}}.",
+  "chapter.codex.mutants.two": "Рыбачь на глубине, чтобы найти {{item}}.",
+  "chapter.codex.nextDrop": "Следующий аукцион",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} доступно",
+  "chapter.codex.chapterDrops": "Сезонные аукционы",
+  "chapter.codex.chapterDrops.description": "Соревнуйся с другими игроками за самые редкие предметы! За подробностями обращайся к Auctioneer на плазе.",
+  "chapter.codex.soldOut": "Расродано",
   "chapter.discount": "Скидка 25% SFL на сезонные предметы",
   "chapter.exclusiveOffer": "Эксклюзивное предложение!",
   "season.free.season.passes": "Бесплатные сезонные баннеры",
@@ -4292,9 +4292,9 @@
   "seasonedFarmer.one": "Привет, сезонный авантюрист! Sunflower Land известен своими особыми сезонами, которые наполнены уникальными предметами и сюрпризами.",
   "seasonedFarmer.three": "Для полного наслаждения всем тем, что может предложить тебе Sunflower Land, выполняй задания, участвуй в событиях и собирай Сезонные Билеты!",
   "seasonedFarmer.two": "Собирая Сезонные ресурсы, ты получишь доступ к ограниченным по времени наградам, эксклюзивным крафтам и редким сокровищам. Это как оказаться в первом ряду, наслаждаясь всеми чудесами сезона.",
-  "seasons.guide.one": "Сезоны в Sunflower Land привносят в игру оживление и свежесть, предлагая игрокам новые задачи и возможности. С наступлением каждого сезона игроков ожидает множество новых предметов для крафта, украшений, выпущенных ограниченным тиражом, животных-мутантов и редких сокровищ. Эти сезонные изменения создают динамичный и развивающийся игровой процесс, побуждая игроков адаптировать свои стратегии и исследовать новые возможности на своих фермах. Кроме того, сезонные билеты добавляют в игру стратегический элемент: игроки должны решить, как грамотно распределить свои билеты, будь то сбор редких предметов, приобретение украшений с большим запасом или обмен билетов на SFL. Механика сезонных билетов делает игру увлекательной и гарантирует, что в Sunflower Land всегда есть, чего ждать.",
-  "seasons.guide.three": "Благодаря уникальным предложениям каждого сезона и предвкушению неожиданных событий Sunflower Land позволяет игрокам оставаться вовлеченными и развлекаться в течение всего года, создавая яркий и постоянно развивающийся фермерский опыт.",
-  "seasons.guide.two": "Использование сезонных предметов в кузнице гоблинов добавляет еще один уровень азарта. Игроки должны собрать необходимые ресурсы и сезонные билеты, чтобы изготовить эти предметы с ограниченным запасом, что придает ощущение соперничества и безотлагательности. Планирование наперед и выработка стратегии становятся решающими факторами, поскольку игроки стремятся получить желаемые предметы до того, как закончится их запас. Более того, возможность обменивать сезонные билеты на монеты обеспечивает гибкость и позволяет игрокам делать выбор в соответствии с их конкретными игровыми целями.",
+  "chapters.guide.one": "Сезоны в Sunflower Land привносят в игру оживление и свежесть, предлагая игрокам новые задачи и возможности. С наступлением каждого сезона игроков ожидает множество новых предметов для крафта, украшений, выпущенных ограниченным тиражом, животных-мутантов и редких сокровищ. Эти сезонные изменения создают динамичный и развивающийся игровой процесс, побуждая игроков адаптировать свои стратегии и исследовать новые возможности на своих фермах. Кроме того, сезонные билеты добавляют в игру стратегический элемент: игроки должны решить, как грамотно распределить свои билеты, будь то сбор редких предметов, приобретение украшений с большим запасом или обмен билетов на SFL. Механика сезонных билетов делает игру увлекательной и гарантирует, что в Sunflower Land всегда есть, чего ждать.",
+  "chapters.guide.three": "Благодаря уникальным предложениям каждого сезона и предвкушению неожиданных событий Sunflower Land позволяет игрокам оставаться вовлеченными и развлекаться в течение всего года, создавая яркий и постоянно развивающийся фермерский опыт.",
+  "chapters.guide.two": "Использование сезонных предметов в кузнице гоблинов добавляет еще один уровень азарта. Игроки должны собрать необходимые ресурсы и сезонные билеты, чтобы изготовить эти предметы с ограниченным запасом, что придает ощущение соперничества и безотлагательности. Планирование наперед и выработка стратегии становятся решающими факторами, поскольку игроки стремятся получить желаемые предметы до того, как закончится их запас. Более того, возможность обменивать сезонные билеты на монеты обеспечивает гибкость и позволяет игрокам делать выбор в соответствии с их конкретными игровыми целями.",
   "seeds": "Семена",
   "seeds.plantingSpot.needed": "{{plantingSpot}} нужно",
   "seeds.reachingInventoryLimit": "Почти полная корзина!",
