--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -2901,7 +2901,7 @@
   "chores.hank.intro": "Bumpkins'den ödül kazanmak için çiftliğin etrafındaki görevleri tamamlayın.",
   "chores.kingdom": "Krallık İşleri",
   "chores.kingdom.intro": "Fraksiyon Evinizden Mark kazanmak için çiftliğinizdeki görevleri tamamlayın",
-  "hayseedHankv2.dialog2": "Ancak kemiklerim eskisi gibi değil. Günlük işlerimde bana yardım edebilirseniz, sizi {{seasonalTicket}} ile ödüllendireceğim.",
+  "hayseedHankv2.dialog2": "Ancak kemiklerim eskisi gibi değil. Günlük işlerimde bana yardım edebilirseniz, sizi {{chapterTicket}} ile ödüllendireceğim.",
   "hayseedHankv2.newChoresAvailable": "Yeni işler: {{timeLeft}}",
   "hayseedHankv2.confirmSkipChore": "Bu işi atlamak istediğinden emin misin?",
   "confirmation.craft": "{{item}} yapmak istediğinizden emin misiniz?",
@@ -3158,18 +3158,18 @@
   "season.lifetime.farmer": "Ömür Boyu Çiftçi",
   "season.free.with.lifetime": "Lifetime Farmer ile Ücretsiz",
   "season.ticket.bonus": "+2 {{item}} s (teslimatlar ve ev işleri)",
-  "season.codex.intro": "Bu sınırlı sezonda çiftliğiniz için özel koleksiyon ve giyilebilir ürünler üretmek için {{ticket}} s kazanın... Zaman dolmadan acele edin!",
-  "season.codex.howToEarn": "{{ticket}} s nasıl kazanılır?",
-  "season.codex.howToEarn.one": "Plazayı ziyaret edin ve kaynakları Bumpkins'e teslim edin.",
-  "season.codex.nextDrop": "Sonraki damla",
-  "season.codex.seasonalDrops": "Mevsimsel Düşüşler",
-  "season.codex.seasonalDrops.description": "En nadir öğeler için başkalarıyla rekabet edin! Daha fazla ayrıntı için plazadaki Müzayedeci\"yi ziyaret edin.",
-  "season.codex.soldOut": "Satıldı",
-  "season.codex.mutants": "Mutantlar",
-  "season.codex.mutants.discover": "Mevsimsel mutantları keşfedin!",
-  "season.codex.mutants.one": "{{item}} öğesini keşfetmek için yumurta toplayın.",
-  "season.codex.mutants.two": "{{item}} için derinliklerde balık yapın.",
-  "season.codex.mutants.three": "{{item}} 'yi keşfetmek için çiçeklerle deney yapın.",
+  "chapter.codex.intro": "Bu sınırlı sezonda çiftliğiniz için özel koleksiyon ve giyilebilir ürünler üretmek için {{ticket}} s kazanın... Zaman dolmadan acele edin!",
+  "chapter.codex.howToEarn": "{{ticket}} s nasıl kazanılır?",
+  "chapter.codex.howToEarn.one": "Plazayı ziyaret edin ve kaynakları Bumpkins'e teslim edin.",
+  "chapter.codex.nextDrop": "Sonraki damla",
+  "chapter.codex.chapterDrops": "Mevsimsel Düşüşler",
+  "chapter.codex.chapterDrops.description": "En nadir öğeler için başkalarıyla rekabet edin! Daha fazla ayrıntı için plazadaki Müzayedeci\"yi ziyaret edin.",
+  "chapter.codex.soldOut": "Satıldı",
+  "chapter.codex.mutants": "Mutantlar",
+  "chapter.codex.mutants.discover": "Mevsimsel mutantları keşfedin!",
+  "chapter.codex.mutants.one": "{{item}} öğesini keşfetmek için yumurta toplayın.",
+  "chapter.codex.mutants.two": "{{item}} için derinliklerde balık yapın.",
+  "chapter.codex.mutants.three": "{{item}} 'yi keşfetmek için çiçeklerle deney yapın.",
   "share.Tweet": "Tweet",
   "special.event.easterIntro": "Oh hayır, 6 tavşanım yine kayboldu... yiyecek arıyor olmalılar. Onları bulmama yardım eder misin? Diğer tavşanlara benziyorlar ama benzersiz bir ışıltıya sahipler. Onları yakalamak için üzerlerine tıklayın.",
   "special.event.rabbitsMissing": "Tavşanlar eksik",
@@ -3410,15 +3410,15 @@
   "scavenger.guide.one": "Ayçiçeği Ülkesinde temizlik yapmak, gizli hazineleri ortaya çıkarmak ve değerli eşyalar üretmek için heyecan verici fırsatlar sunar. Çöpçülüğün ilk yönü, bir korsan hazine avcısı olabileceğiniz kazma alanında hazine kazmayı içerir. Plajın kuzeyinde bulunan bu alana girerek ve Cafer'in dükkanında bir kum küreği veya kum matkabı yaparak, çeşitli hazineleri ortaya çıkarmak için kumlu noktaları kazabilirsiniz.",
   "scavenger.guide.two": "Başka bir çöpçü biçimi, çiftliğinizde ve çevresindeki adalarda kendiliğinden ortaya çıkan yabani ve sihirli mantarları toplamayı içerir. Bu mantarlar ücretsiz olarak toplanabilir ve tariflerde, görevlerde ve zanaat öğelerinde kullanılabilir. Farklı aralıklarla yenilendikleri için bu mantarlara dikkat edin. Yabani mantarlar, çiftliğinizde maksimum 5 mantar sınırı ile her 16 saatte bir yenilenir. Sihirli mantarlar Başlangıç Adası'nda her 48 saatte bir, Petal Paradise'da her 36 saatte bir ve Çöl Adası'nda 24 saatte bir yenilenir ve çiftliğinizde maksimum 3 mantar sınırı vardır. Araziniz doluysa, çevredeki adalarda mantarlar görünecek ve bu değerli kaynakları kaçırmamanızı sağlar.",
   "fruit.guide.two": "Meyve dikmek için, Petal Paradise'a yükselttikten sonra kullanılabilir hale gelen daha büyük meyve yamaları edinmeniz gerekecek.",
-  "seasons.guide.one": "Ayçiçeği Ülkesindeki mevsimler oyuna heyecan ve tazelik getiriyor, oyunculara yeni zorluklar ve fırsatlar sunuyor. Her sezonda oyuncular, dinamik ve gelişen bir oyun deneyimi yaratarak çeşitli yeni giyilebilir ve koleksiyonlar, mevsimsel mutantlar ve nadir hazineleri dört gözle bekleyebilir. Bu, oyuncuları stratejilerini uyarlamaya ve çiftliklerinde yeni olasılıkları keşfetmeye teşvik eder. Ek olarak, sezonluk biletler oyuna stratejik bir unsur katar. Oyuncular ister nadir eşyaları toplamak, ister süslemeler ve kozmetik ürünleri tercih etmek veya Jetonlarla bilet takas etmek olsun, biletlerini nasıl akıllıca tahsis edeceklerine karar vermelidir. Sezonluk mekanik, oyunu ilgi çekici tutar ve Sunflower Land'de her zaman dört gözle bekleyeceğiniz bir şey olmasını sağlar.",
+  "chapters.guide.one": "Ayçiçeği Ülkesindeki mevsimler oyuna heyecan ve tazelik getiriyor, oyunculara yeni zorluklar ve fırsatlar sunuyor. Her sezonda oyuncular, dinamik ve gelişen bir oyun deneyimi yaratarak çeşitli yeni giyilebilir ve koleksiyonlar, mevsimsel mutantlar ve nadir hazineleri dört gözle bekleyebilir. Bu, oyuncuları stratejilerini uyarlamaya ve çiftliklerinde yeni olasılıkları keşfetmeye teşvik eder. Ek olarak, sezonluk biletler oyuna stratejik bir unsur katar. Oyuncular ister nadir eşyaları toplamak, ister süslemeler ve kozmetik ürünleri tercih etmek veya Jetonlarla bilet takas etmek olsun, biletlerini nasıl akıllıca tahsis edeceklerine karar vermelidir. Sezonluk mekanik, oyunu ilgi çekici tutar ve Sunflower Land'de her zaman dört gözle bekleyeceğiniz bir şey olmasını sağlar.",
   "keys": "Anahtarlar",
   "seasonedFarmer.description": "50 Sezonluk Bilet Topla",
   "crops.guide.two": "Mahsul yetiştirmek için ilgili tohumları Betty'nin pazarından satın almanız gerekir. Her mahsulün Ayçiçekleri için sadece 1 dakikadan Kale için 36 saate kadar değişen farklı bir büyüme süresi vardır. Mahsuller tamamen büyüdüğünde, onları hasat edebilir ve ödüllerini toplayabilirsiniz.",
   "cooking.guide.four": "Yiyecek hazır olduğunda, üzerine tıklayarak ve envanterinize taşıyarak binadan alın. Ardından Çadırın veya çiftlikteki evin yakınındaki Bumpkin NPC'nizle etkileşime girebilir ve onlara hazır yiyeceklerle besleyebilir, XP kazanmalarına ve oyunda daha da ilerlemelerine yardımcı olabilirsiniz.",
   "deliveries.guide.two": "Yeni bir oyuncu olarak, birkaç emirle başlarsınız, ancak bumpkin'inizi yükseltirken, ek siparişlerin kilidini açacaksınız. Bu şekilde, ileri düzey oyuncular daha fazla sipariş tamamlayabilir. Her 24 saatte bir yeni siparişler gelir ve yiyeceklerden, kaynaklardan, çiçeklerden vb. çeşitli istekler sunar. Siparişleri tamamlamak size Coins, SFL veya sezonluk biletler kazandıracaktır.",
   "deliveries.guide.three": "Çiftçiler, teslimatları tamamlayarak belirli NPC'lerle arkadaşlıklarını geliştirebilirler. bunlara ek olarak, onlara çiçek hediye etmek arkadaşlığı daha da geliştirecektir. Arkadaşlık çubuğu dolduğunda, NPC sizi bir hediye ile ödüllendirecek. Codex'e göz kulak olun ve çeşitli siparişlerle kendinize meydan okuyun, daha zorlu talepleri yerine getirmek için gerektiğinde seviye atlayın ve yeni binaların kilidini açın.",
-  "seasons.guide.two": "Stella's Mega Store, Auction House ve Jafar mağazasında mevsimlik giyilebilir ve koleksiyon eşyalarının mevcudiyeti, Ayçiçeği Ülkesine bir heyecan katmanı daha katıyor. Oyuncular, bu mevsimlik eşyaları üretmek veya açık artırmalarda teklif vermek için sezonluk biletler, hazineler ve diğer özel gereksinimleri toplamalı ve rekabet ve aciliyet duygusu teşvik etmelidir. Oyuncular zaman dolmadan istedikleri öğeleri güvence altına almayı hedefledikleri için önceden planlama ve strateji oluşturma çok önemli hale geliyor.",
-  "seasons.guide.three": "Her sezonun benzersiz teklifleri ve sürpriz etkinliklerin beklentisiyle, Sunflower Land oyuncuları yıl boyunca meşgul ve eğlendirerek canlı ve sürekli gelişen bir çiftçilik deneyimi yaratır.",
+  "chapters.guide.two": "Stella's Mega Store, Auction House ve Jafar mağazasında mevsimlik giyilebilir ve koleksiyon eşyalarının mevcudiyeti, Ayçiçeği Ülkesine bir heyecan katmanı daha katıyor. Oyuncular, bu mevsimlik eşyaları üretmek veya açık artırmalarda teklif vermek için sezonluk biletler, hazineler ve diğer özel gereksinimleri toplamalı ve rekabet ve aciliyet duygusu teşvik etmelidir. Oyuncular zaman dolmadan istedikleri öğeleri güvence altına almayı hedefledikleri için önceden planlama ve strateji oluşturma çok önemli hale geliyor.",
+  "chapters.guide.three": "Her sezonun benzersiz teklifleri ve sürpriz etkinliklerin beklentisiyle, Sunflower Land oyuncuları yıl boyunca meşgul ve eğlendirerek canlı ve sürekli gelişen bir çiftçilik deneyimi yaratır.",
   "description.gift.giver.boost": "Oyunculara hediye edin",
   "description.halo.boost": "Mod araçlarına erişim",
   "keys.dailyLimit": "Günlük Limit: {{keysAmountBoughtToday}} /1",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "Bu sezon heyecan verici görevler, nadir koleksiyonlar ve kazanabileceğiniz özel giyilebilir ürünler var.",
   "birdieplaza.craftItems": "Bu nadir eşyaları elde etmek için {{seasonalTicket}} s toplamanız ve bunları Stella's Megastore'da değiştirmeniz veya Müzayede Evi'nde teklif vermeniz gerekir.",
   "reward.streak.oneYear": "365 gün seri ödülü",
-  "season.codex.nextDrop.available": "{{dropSupply}} mevcut",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} mevcut",
   "description.hoot.boost": "+0.5 Buğday, Turp, Lahana, Pirinç, Arpa",
   "description.barley": "Arpa, hayvan yemlerinde kullanılan besleyici bir tahıl tanesidir.",
   "gems.speedUp": "Hızlandırın",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Bumpkins sarı karanfile değer vermez.",
   "noBumpkin.bumpkinHelp": "Toprağınızı ekmenize, hasat etmenize, doğramanıza, madenciliğine ve genişletmenize yardımcı olacak bir Bumpkin'e ihtiyacınız var. Destek yakında bir Bumpkin eklemek için geliyor!",
   "chores.weeklyChores": "Haftalık Ev İşleri",
-  "chores.completeChoresToEarn": "Bumpkins'in {{seasonalTicket}} s kazanması için işleri tamamlayın.",
+  "chores.completeChoresToEarn": "Bumpkins'in {{chapterTicket}}s kazanması için işleri tamamlayın.",
   "chores.lockedChore": "Lvl {{level}}",
   "chores.completed": "Tamamlandı",
   "chores.complete": "Tamamlandı",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 Hayvan Ürünleri",
   "description.chicken.coop": "Tavuk yetiştirmek için kullanılabilecek bir tavuk kümesi. Bu nadir küme ile yumurta üretimini artırın.",
   "description.gold.egg": "Altın yumurta. İçinde bulunanın iyi şansın taşıyıcısı olduğu biliniyor.",
-  "season.codex.howToEarn.two": "Bumpkins için işleri tamamla. (11 Kasım)",
-  "season.codex.howToEarn.three": "Hayvan ve çiçek ödüllerini takas et! (11 Kasım)",
+  "chapter.codex.howToEarn.two": "Bumpkins için işleri tamamla. (11 Kasım)",
+  "chapter.codex.howToEarn.three": "Hayvan ve çiçek ödüllerini takas et! (11 Kasım)",
   "description.cowboyHat.boost": "+1 Horseshoes",
   "description.cowboyShirt.boost": "+1 Horseshoes",
   "description.cowboyTrouser.boost": "+1 Horseshoes",
-  "season.codex.howToEarn.comingSoon": "Ev işleri, teslimatlar ve ödüllerden at nalı kazanın!",
+  "chapter.codex.howToEarn.comingSoon": "Ev işleri, teslimatlar ve ödüllerden at nalı kazanın!",
   "description.cropCircle": "Çiftliğinizde görünen gizemli bir daire... ne anlama gelebilir?",
   "description.omnifeed": "Tüm hayvanlar için en iyi yem görevi görür.",
   "description.brush": "Hayvan Fırçası. Bunu hayvanlarınıza şefkat göstermek için kullanın.",
