--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -2219,7 +2219,7 @@
   "harvestflower.notReady": "花卉还未可供收成",
   "harvestflower.alr.plant": "花卉已经种下",
   "hayseedHankv2.dialog1": "嘿，哈喽喂，朝气高傲的年轻人！我是 Hayseed Hank，一位经验丰富的乡包佬老农，一如往日照料着这片土地。",
-  "hayseedHankv2.dialog2": "不过，我这老骨头却已不如往日了。如果你能帮我做些日常农活，我会奖励你 {{seasonalTicket}}。",
+  "hayseedHankv2.dialog2": "不过，我这老骨头却已不如往日了。如果你能帮我做些日常农活，我会奖励你 {{chapterTicket}}。",
   "hayseedHankv2.action": "让咱开始吧",
   "hayseedHankv2.title": "Hank 的日常农活",
   "hayseedHankv2.newChoresAvailable": "Hank 农活刷新：{{timeLeft}}",
@@ -3021,18 +3021,18 @@
   "season.lifetime.farmer": "终身农民",
   "season.free.with.lifetime": "终身农民免费领取",
   "season.ticket.bonus": "+2 {{item}} s（送货和杂务）",
-  "season.codex.intro": "在此次限定时季里赚取 {{ticket}} ，为您的农场铸造限定收藏品和穿戴品……时不我待，赶快行动吧！",
-  "season.codex.howToEarn": "如何赚取 {{ticket}} ？",
-  "season.codex.howToEarn.one": "光顾广场，向乡包佬运送资源。",
-  "season.codex.nextDrop": "下一次空投",
-  "season.codex.seasonalDrops": "时季空投",
-  "season.codex.seasonalDrops.description": "与其他人争夺最稀有的物品！更多详情，请访问广场的拍卖行。",
-  "season.codex.soldOut": "已售罄",
-  "season.codex.mutants": "变异体",
-  "season.codex.mutants.discover": "探索时季变种体！",
-  "season.codex.mutants.one": "收集鸡蛋来发现 {{item}}。",
-  "season.codex.mutants.two": "在深海钓鱼以捕获 {{item}}。",
-  "season.codex.mutants.three": "尝试种花卉来发现 {{item}}。",
+  "chapter.codex.intro": "在此次限定时季里赚取 {{ticket}} ，为您的农场铸造限定收藏品和穿戴品……时不我待，赶快行动吧！",
+  "chapter.codex.howToEarn": "如何赚取 {{ticket}} ？",
+  "chapter.codex.howToEarn.one": "光顾广场，向乡包佬运送资源。",
+  "chapter.codex.nextDrop": "下一次空投",
+  "chapter.codex.chapterDrops": "时季空投",
+  "chapter.codex.chapterDrops.description": "与其他人争夺最稀有的物品！更多详情，请访问广场的拍卖行。",
+  "chapter.codex.soldOut": "已售罄",
+  "chapter.codex.mutants": "变异体",
+  "chapter.codex.mutants.discover": "探索时季变种体！",
+  "chapter.codex.mutants.one": "收集鸡蛋来发现 {{item}}。",
+  "chapter.codex.mutants.two": "在深海钓鱼以捕获 {{item}}。",
+  "chapter.codex.mutants.three": "尝试种花卉来发现 {{item}}。",
   "share.TweetText": "参观我的 Sunflower Land 农场",
   "share.FarmNFTImageAlt": "Sunflower-Land 农场 NFT 图片",
   "share.CopyFarmURL": "复制农场 URL",
@@ -3410,15 +3410,15 @@
   "scavenger.guide.one": "在 Sunflower Land 搜刮物品为发现隐藏的宝藏和锻造贵重物品提供了令人兴奋的机会。搜刮的第一个选项是在挖掘区挖宝，在那里你可以成为海盗寻宝者。通过冒险前往这个位于海滩北部的区域、在 Jafar 的商店锻造沙铲或沙钻，您可以在沙地挖掘以发现各种宝藏。",
   "scavenger.guide.two": "另一种选项的搜刮是收集野生和魔法蘑菇，这些蘑菇会自然出现在您的农场和周围的岛屿上。这些蘑菇可以被免费收集并用于食谱、任务和物品锻造。留意这些蘑菇，因为它们以不同的间隔补充。野生蘑菇每 16 小时刷新一次，您的农场最多只能生成 5 个野生蘑菇。在新手岛上，魔法蘑菇每 48 小时刷新一次，在春花岛上每 36 小时刷新一次，在沙漠岛上每隔 24 小时刷新一次，农场上最多可补充 3 个魔法蘑菇。如果您的土地已满，蘑菇就会出现在周围的岛屿上，确保您没有错过这些宝贵的资源。",
   "fruit.guide.two": "要种植水果，您需要获得更大的水果树坑，需要升级到春花岛后方可获取。",
-  "seasons.guide.one": "Sunflower Land 的时季为游戏带来了刺激和新鲜感，为玩家提供了新的挑战和机遇。在每个时季中，玩家都可以期待各种新的穿戴品和收藏品、时季变种体和稀有宝藏，从而创造出动态和不断变化的游戏体验。这鼓励玩家调整策略，在农场上探索新的可能性。此外，时季票券为游戏增添了策略玩法。玩家必须决定如何明智地分配门票，无论是收集稀有物品、选择装潢和装饰品，还是用票券兑换硬币。时季机制使游戏保持吸引力，并确保 Sunflower Land 总有值得期待的东西。",
+  "chapters.guide.one": "Sunflower Land 的时季为游戏带来了刺激和新鲜感，为玩家提供了新的挑战和机遇。在每个时季中，玩家都可以期待各种新的穿戴品和收藏品、时季变种体和稀有宝藏，从而创造出动态和不断变化的游戏体验。这鼓励玩家调整策略，在农场上探索新的可能性。此外，时季票券为游戏增添了策略玩法。玩家必须决定如何明智地分配门票，无论是收集稀有物品、选择装潢和装饰品，还是用票券兑换硬币。时季机制使游戏保持吸引力，并确保 Sunflower Land 总有值得期待的东西。",
   "keys": "钥匙",
   "seasonedFarmer.description": "收集 50 张时季票券",
   "crops.guide.two": "要种植庄稼，您需要从 Betty 的市场购买相应的种子。每种庄稼的生长时间不同，从向日葵的生长时间仅为 1 分钟到羽衣甘蓝的 36 小时不等。庄稼完全种植后，您可以收获它们并获得回报。",
   "cooking.guide.four": "食物准备好后，点击建筑物并将其移入库存中，将其从建筑物中取出。然后，您可以在农场的帐篷或房屋附近与你的乡包佬 NPC 互动，给他们喂准备好的食物，帮助他们获得经验值并在游戏中推进进度。",
   "deliveries.guide.two": "作为一名新玩家，您一开始会有些许订单，但是随着您的乡包佬等级提高，您将解锁额外的订单。这样，高级玩家可以完成更多订单。每隔 24 小时就会有新的订单，订单会要求食物、资源、花卉等的一系列请求。完成订单将为您赢得金币、SFL 或时季票券。",
   "deliveries.guide.three": "农民可以通过完成送货来增进与某些 NPC 的友谊。此外，向他们赠送花卉将进一步增进友谊。友谊栏满后，NPC 会奖励您一份礼物。密切关注 Codex，用各种订单挑战自我，根据需要升级和解锁新建筑，以满足更苛刻的请求。",
-  "seasons.guide.two": "Stella 的超星商店、拍卖行和 Jafar 商店的时季穿戴品和收藏品供应为 Sunflower Land 增添了又一层刺激感。玩家必须收集时季票券、宝藏和其他特定要求或在拍卖会上竞标才能铸造这些时季物品，从而培养竞争感和紧迫感。提前计划和制定策略变得至关重要，因为玩家的目标是在时间用完之前获得所需的物品。",
-  "seasons.guide.three": "Sunflower Land 通过每个时季的独特供应和对惊喜活动的期待，让玩家全年保持参与并乐在其中，创造一种充满活力又不断变化的农耕体验。",
+  "chapters.guide.two": "Stella 的超星商店、拍卖行和 Jafar 商店的时季穿戴品和收藏品供应为 Sunflower Land 增添了又一层刺激感。玩家必须收集时季票券、宝藏和其他特定要求或在拍卖会上竞标才能铸造这些时季物品，从而培养竞争感和紧迫感。提前计划和制定策略变得至关重要，因为玩家的目标是在时间用完之前获得所需的物品。",
+  "chapters.guide.three": "Sunflower Land 通过每个时季的独特供应和对惊喜活动的期待，让玩家全年保持参与并乐在其中，创造一种充满活力又不断变化的农耕体验。",
   "description.gift.giver.boost": "向玩家赠送礼物",
   "description.halo.boost": "访问管理工具",
   "keys.dailyLimit": "每日限额：{{keysAmountBoughtToday}} / 1",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "本时季有激动人心的任务、稀有收藏品和独家穿戴品供您赚取。",
   "birdieplaza.craftItems": "要获得这些稀有物品，您必须收集 {{seasonalTicket}} 并在 Stella 的超星商店兑换或在拍卖行竞拍。",
   "reward.streak.oneYear": "365 天连续奖励",
-  "season.codex.nextDrop.available": "{{dropSupply}} 可用",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} 可用",
   "description.hoot.boost": "+0.5 小麦、萝卜、羽衣甘蓝、大米、大麦等高阶庄稼",
   "description.barley": "大麦是一种营养丰富的谷物，用于动物饲料。",
   "gems.speedUp": "加快速度",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "乡包佬们不看重黄色康乃馨。",
   "noBumpkin.bumpkinHelp": "您需要一个乡包佬来帮助您种植、收割、砍伐、开采和扩张土地。即将支持添加乡包佬功能！",
   "chores.weeklyChores": "时季农活",
-  "chores.completeChoresToEarn": "完成乡包佬们的农活即可获得 {{seasonalTicket}} 。",
+  "chores.completeChoresToEarn": "完成乡包佬们的农活即可获得 {{chapterTicket}}。",
   "chores.lockedChore": "等级 {{level}}",
   "chores.completed": "已经交付",
   "chores.complete": "进行交付",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 动物产出",
   "description.chicken.coop": "可以用来养鸡的鸡舍。使用这种稀有鸡舍来增加产蛋量。",
   "description.gold.egg": "一个金蛋。里面所填之物，众所周知，承载着好运。",
-  "season.codex.howToEarn.two": "为乡包佬完成农活。（11月11日）",
-  "season.codex.howToEarn.three": "交易动物和花卉赏金！（11月11日）",
+  "chapter.codex.howToEarn.two": "为乡包佬完成农活。（11月11日）",
+  "chapter.codex.howToEarn.three": "交易动物和花卉赏金！（11月11日）",
   "description.cowboyHat.boost": "+1 马蹄铁",
   "description.cowboyShirt.boost": "+1 马蹄铁",
   "description.cowboyTrouser.boost": "+1 马蹄铁",
-  "season.codex.howToEarn.comingSoon": "从农活、送货和赏金中赚取马蹄铁！",
+  "chapter.codex.howToEarn.comingSoon": "从农活、送货和赏金中赚取马蹄铁！",
   "description.cropCircle": "您的农场里出现了一个神秘的圆阵……这会是意味着什么？",
   "description.omnifeed": "所有动物的最佳饲料。",
   "description.brush": "动物毛刷。用来表达对动物的爱意。",
