--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -1928,8 +1928,8 @@
   "fruit.guide.one": "Obst spielt in Sunflower Land eine wichtige Rolle als wertvolle Ressource, die für Münzen verkauft oder für verschiedene Rezepte und zum Basteln verwendet werden kann. Im Gegensatz zu Nutzpflanzen haben Fruchtbeete die einzigartige Fähigkeit, sich nach jeder Ernte mehrmals aufzufüllen, was den Spielern eine nachhaltige Fruchtquelle bietet.",
   "fruit.guide.two": "Um Früchte zu pflanzen, musst du größere Fruchtfelder erwerben, die nach dem Upgrade auf Petal Paradise verfügbar werden.",
   "fruit.guide.three": "Indem du Obst anbaust und es in deine Anbaustrategien einbeziehst, kannst du deine Gewinne maximieren, köstliche Rezepte kreieren und neue Möglichkeiten in Sunflower Land erschließen.",
-  "seasons.guide.one": "Die Jahreszeiten im Sonnenblumenland bringen Spannung und Frische ins Spiel und bieten den Spielern neue Herausforderungen und Möglichkeiten. In jeder Jahreszeit können sich die Spieler auf eine Vielzahl neuer Wearables und Sammlerstücke, saisonaler Mutanten und seltener Schätze freuen, die für ein dynamisches und sich entwickelndes Spielerlebnis sorgen. Dies ermutigt die Spieler, ihre Strategien anzupassen und neue Möglichkeiten auf ihren Farmen zu erkunden. Darüber hinaus fügen Saisonkarten dem Spiel ein strategisches Element hinzu. Die Spieler müssen entscheiden, wie sie ihre Tickets mit Bedacht verteilen, ob sie seltene Gegenstände sammeln, sich für Dekorationen und Kosmetik entscheiden oder Tickets gegen Münzen eintauschen. Die saisonale Mechanik sorgt für ein fesselndes Spiel und sorgt dafür, dass es in Sunflower Land immer etwas gibt, auf das man sich freuen kann.",
-  "seasons.guide.two": "Die Verfügbarkeit saisonaler Wearables und Sammlerstücke in Stellas Mega Store, im Auktionshaus und in Jafars Laden verleiht Sunflower Land noch mehr Spannung. Die Spieler müssen Saisonkarten, Schätze und andere spezifische Anforderungen sammeln, um diese saisonalen Gegenstände herzustellen oder auf Auktionen darauf zu bieten, was ein Gefühl von Wettbewerb und Dringlichkeit fördert. Vorausschauende Planung und strategische Planung werden entscheidend, da die Spieler versuchen, sich ihre gewünschten Gegenstände zu sichern, bevor die Zeit abläuft. Mit den einzigartigen Angeboten jeder Jahreszeit und der Vorfreude auf Überraschungsereignisse hält Sunflower Land die Spieler das ganze Jahr über bei Laune und Unterhaltung und sorgt so für ein lebendiges und sich ständig weiterentwickelndes Farmerlebnis.",
+  "chapters.guide.one": "Die Jahreszeiten im Sonnenblumenland bringen Spannung und Frische ins Spiel und bieten den Spielern neue Herausforderungen und Möglichkeiten. In jeder Jahreszeit können sich die Spieler auf eine Vielzahl neuer Wearables und Sammlerstücke, saisonaler Mutanten und seltener Schätze freuen, die für ein dynamisches und sich entwickelndes Spielerlebnis sorgen. Dies ermutigt die Spieler, ihre Strategien anzupassen und neue Möglichkeiten auf ihren Farmen zu erkunden. Darüber hinaus fügen Saisonkarten dem Spiel ein strategisches Element hinzu. Die Spieler müssen entscheiden, wie sie ihre Tickets mit Bedacht verteilen, ob sie seltene Gegenstände sammeln, sich für Dekorationen und Kosmetik entscheiden oder Tickets gegen Münzen eintauschen. Die saisonale Mechanik sorgt für ein fesselndes Spiel und sorgt dafür, dass es in Sunflower Land immer etwas gibt, auf das man sich freuen kann.",
+  "chapters.guide.two": "Die Verfügbarkeit saisonaler Wearables und Sammlerstücke in Stellas Mega Store, im Auktionshaus und in Jafars Laden verleiht Sunflower Land noch mehr Spannung. Die Spieler müssen Saisonkarten, Schätze und andere spezifische Anforderungen sammeln, um diese saisonalen Gegenstände herzustellen oder auf Auktionen darauf zu bieten, was ein Gefühl von Wettbewerb und Dringlichkeit fördert. Vorausschauende Planung und strategische Planung werden entscheidend, da die Spieler versuchen, sich ihre gewünschten Gegenstände zu sichern, bevor die Zeit abläuft. Mit den einzigartigen Angeboten jeder Jahreszeit und der Vorfreude auf Überraschungsereignisse hält Sunflower Land die Spieler das ganze Jahr über bei Laune und Unterhaltung und sorgt so für ein lebendiges und sich ständig weiterentwickelndes Farmerlebnis.",
   "pete.teaser.one": "Hacke die Bäume",
   "pete.teaser.three": "Ernten Sie die Sonnenblumen",
   "pete.teaser.four": "Verkaufe die Sonnenblumen",
@@ -1944,7 +1944,7 @@
   "harvestflower.notReady": "Die Blume ist nicht erntereif",
   "harvestflower.alr.plant": "Die Blume ist bereits gepflanzt",
   "hayseedHankv2.dialog1": "Nun, hallo, junge Grünschnäbel! Ich bin Hayseed Hank, ein erfahrener alter Bumpkin-Farmer, der sich wie in den guten alten Zeiten um das Land kümmert.",
-  "hayseedHankv2.dialog2": "Meine Knochen sind jedoch nicht mehr das, was sie einmal waren. Wenn du mir bei meinen täglichen Aufgaben helfen kannst, belohne ich dich mit {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Meine Knochen sind jedoch nicht mehr das, was sie einmal waren. Wenn du mir bei meinen täglichen Aufgaben helfen kannst, belohne ich dich mit {{chapterTicket}}.",
   "hayseedHankv2.action": "Lass es uns machen",
   "hayseedHankv2.title": "Hanks tägliche Aufgaben",
   "hayseedHankv2.newChoresAvailable": "Neue Aufgaben: {{timeLeft}}",
@@ -2920,18 +2920,18 @@
   "season.lifetime.farmer": "Farmer auf Lebenszeit",
   "season.free.with.lifetime": "Kostenlos mit Lifetime Farmer",
   "season.ticket.bonus": "+2 {{item}} s (Lieferungen und Hausarbeiten)",
-  "season.codex.intro": "Verdiene {{ticket}} s, um in dieser limitierten Saison exklusive Sammlerstücke und Wearables für deine Farm herzustellen... Beeil dich, bevor die Zeit abläuft!",
-  "season.codex.howToEarn": "Wie verdiene ich {{ticket}} s?",
-  "season.codex.howToEarn.one": "Besucht den Platz und liefert Ressourcen an Bumpkins.",
-  "season.codex.nextDrop": "Nächster Drop",
-  "season.codex.seasonalDrops": "Saisonale Drops",
-  "season.codex.seasonalDrops.description": "Konkurrieren Sie mit anderen um die seltensten Gegenstände! Besuchen Sie den Auktionator auf dem Platz für weitere Informationen.",
-  "season.codex.soldOut": "Ausverkauft",
-  "season.codex.mutants": "Mutanten",
-  "season.codex.mutants.discover": "Entdecke die saisonalen Mutanten!",
-  "season.codex.mutants.one": "Sammle Eier, um die {{item}} zu entdecken.",
-  "season.codex.mutants.two": "Fische in den Tiefen nach dem {{item}}.",
-  "season.codex.mutants.three": "Experimentiere mit Blumen, um {{item}} zu entdecken.",
+  "chapter.codex.intro": "Verdiene {{ticket}} s, um in dieser limitierten Saison exklusive Sammlerstücke und Wearables für deine Farm herzustellen... Beeil dich, bevor die Zeit abläuft!",
+  "chapter.codex.howToEarn": "Wie verdiene ich {{ticket}} s?",
+  "chapter.codex.howToEarn.one": "Besucht den Platz und liefert Ressourcen an Bumpkins.",
+  "chapter.codex.nextDrop": "Nächster Drop",
+  "chapter.codex.chapterDrops": "Saisonale Drops",
+  "chapter.codex.chapterDrops.description": "Konkurrieren Sie mit anderen um die seltensten Gegenstände! Besuchen Sie den Auktionator auf dem Platz für weitere Informationen.",
+  "chapter.codex.soldOut": "Ausverkauft",
+  "chapter.codex.mutants": "Mutanten",
+  "chapter.codex.mutants.discover": "Entdecke die saisonalen Mutanten!",
+  "chapter.codex.mutants.one": "Sammle Eier, um die {{item}} zu entdecken.",
+  "chapter.codex.mutants.two": "Fische in den Tiefen nach dem {{item}}.",
+  "chapter.codex.mutants.three": "Experimentiere mit Blumen, um {{item}} zu entdecken.",
   "share.TweetText": "Besuchen Sie My Sunflower Land Farm",
   "share.ShareYourFarmLink": "Teile deinen Farm-Link",
   "share.ShowOffToFarmers": "Zeigen Sie anderen Landwirten, indem Sie Ihren Farmlink teilen",
@@ -3424,7 +3424,7 @@
   "mega.collectibles": "Mega-Sammlerstücke",
   "mega.wearables": "Mega Wearables",
   "deliveries.guide.three": "Farmer können ihre Freundschaft mit bestimmten NPCs verbessern, indem sie Lieferungen abschließen. Darüber hinaus wird die Freundschaft durch das Verschenken von Blumen an sie weiter verbessert. Sobald die Freundschaftsleiste voll ist, belohnt dich der NPC mit einem Geschenk. Behalte den Kodex im Auge und fordere dich selbst mit einer Vielzahl von Befehlen heraus. Steige auf und schalte bei Bedarf neue Gebäude frei, um anspruchsvollere Anfragen zu erfüllen.",
-  "seasons.guide.three": "Mit den einzigartigen Angeboten jeder Jahreszeit und der Vorfreude auf Überraschungsevents sorgt Sunflower Land das ganze Jahr über dafür, dass die Spieler das ganze Jahr über beschäftigt und unterhalten werden, und sorgt so für ein lebendiges und sich ständig weiterentwickelndes Farmerlebnis.",
+  "chapters.guide.three": "Mit den einzigartigen Angeboten jeder Jahreszeit und der Vorfreude auf Überraschungsevents sorgt Sunflower Land das ganze Jahr über dafür, dass die Spieler das ganze Jahr über beschäftigt und unterhalten werden, und sorgt so für ein lebendiges und sich ständig weiterentwickelndes Farmerlebnis.",
   "marketplace.offerClaimed": "Herzlichen Glückwunsch, Ihr Angebot wurde angenommen!",
   "description.scarab": "Das verlorene Artefakt des Pharao.",
   "keys": "Schlüssel",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "In dieser Saison erwarten dich spannende Quests, seltene Sammlerstücke und exklusive Wearables, die du dir verdienen kannst.",
   "birdieplaza.craftItems": "Um diese seltenen Gegenstände zu erhalten, müsst ihr {{seasonalTicket}} s sammeln und sie in Stellas Megastore eintauschen oder im Auktionshaus bieten.",
   "reward.streak.oneYear": "Belohnung für eine 365-tägige Serie",
-  "season.codex.nextDrop.available": "{{dropSupply}} verfügbar",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} verfügbar",
   "description.hoot.boost": "+0.5 Weizen, Rettich, Grünkohl, Reis, Gerste",
   "description.barley": "Gerste ist ein nahrhaftes Getreidekorn, das als Tierfutter verwendet wird.",
   "gems.speedUp": "Beschleunigen",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Bumpkins schätzen die gelbe Nelke nicht.",
   "noBumpkin.bumpkinHelp": "Du brauchst einen Bumpkin, der dir hilft, dein Land zu pflanzen, zu ernten, zu hacken, abzubauen und zu erweitern. Unterstützung wird bald verfügbar sein, um einen Bumpkin hinzuzufügen!",
   "chores.weeklyChores": "Wöchentliche Hausarbeiten",
-  "chores.completeChoresToEarn": "Erledige Aufgaben für Bumpkins, um {{seasonalTicket}} s zu verdienen.",
+  "chores.completeChoresToEarn": "Erledige Aufgaben für Bumpkins, um {{chapterTicket}}s zu verdienen.",
   "chores.lockedChore": "Stufe {{level}}",
   "chores.completed": "Abgeschlossen",
   "chores.complete": "Vollständig",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 Tierische Produkte",
   "description.chicken.coop": "Ein Hühnerstall, in dem Hühner aufgezogen werden können. Erhöhen Sie die Eierproduktion mit diesem seltenen Stall.",
   "description.gold.egg": "Ein goldenes Ei. Es ist bekannt, dass das, was darin liegt, Glück bringt.",
-  "season.codex.howToEarn.two": "Erledige die Hausarbeiten für Bumpkins. (11. November)",
-  "season.codex.howToEarn.three": "Tauschen Sie Tier- und Blumenprämien ein! (11. November)",
+  "chapter.codex.howToEarn.two": "Erledige die Hausarbeiten für Bumpkins. (11. November)",
+  "chapter.codex.howToEarn.three": "Tauschen Sie Tier- und Blumenprämien ein! (11. November)",
   "description.cowboyHat.boost": "+1 Hufeisen",
   "description.cowboyShirt.boost": "+1 Hufeisen",
   "description.cowboyTrouser.boost": "+1 Hufeisen",
-  "season.codex.howToEarn.comingSoon": "Verdiene Hufeisen durch Hausarbeiten, Lieferungen und Kopfgelder!",
+  "chapter.codex.howToEarn.comingSoon": "Verdiene Hufeisen durch Hausarbeiten, Lieferungen und Kopfgelder!",
   "description.cropCircle": "Ein mysteriöser Kreis, der auf deiner Farm erscheint... was könnte das bedeuten?",
   "description.omnifeed": "Es ist das beste Futter für alle Tiere.",
   "description.brush": "Tierbürste. Verwenden Sie dies, um Ihren Tieren Zuneigung zu zeigen.",
