--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -1913,7 +1913,7 @@
   "harvestflower.notReady": "La flor no está lista para cosechar",
   "harvestflower.alr.plant": "La flor ya está plantada",
   "hayseedHankv2.dialog1": "Bueno, qué tal, jovencitos mocosos! Soy Hayseed Hank, un granjero experimentado que cuida la tierra como en los viejos tiempos.",
-  "hayseedHankv2.dialog2": "Sin embargo, mis huesos ya no son lo que eran. Si puedes ayudarme con mis tareas diarias, te recompensaré con {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Sin embargo, mis huesos ya no son lo que eran. Si puedes ayudarme con mis tareas diarias, te recompensaré con {{chapterTicket}}.",
   "hayseedHankv2.action": "Vamos a hacerlo",
   "hayseedHankv2.title": "Las tareas diarias de Hank",
   "hayseedHankv2.newChoresAvailable": "Nuevas tareas: {{timeLeft}}",
@@ -2886,18 +2886,18 @@
   "season.lifetime.farmer": "Granjero de por vida",
   "season.free.with.lifetime": "Gratis con Lifetime Farmer",
   "season.ticket.bonus": "+2 {{item}} s (entregas y tareas)",
-  "season.codex.intro": "Gana {{ticket}} para crear objetos coleccionables y ponibles exclusivos para tu granja en esta temporada limitada... Date prisa antes de que se acabe el tiempo!",
-  "season.codex.howToEarn": "¿Cómo ganar {{ticket}} ?",
-  "season.codex.howToEarn.one": "Visite la plaza y entregue recursos a los Bumpkins.",
-  "season.codex.nextDrop": "Próxima Subasta",
-  "season.codex.seasonalDrops": "Subastas de temporada",
-  "season.codex.seasonalDrops.description": "Compite con otros por los objetos más raros! Visita la subasta en la plaza para obtener más información.",
-  "season.codex.soldOut": "Agotado",
-  "season.codex.mutants": "Mutantes",
-  "season.codex.mutants.discover": "Descubre a los mutantes de temporada!",
-  "season.codex.mutants.one": "Recoge huevos para descubrir el {{item}}.",
-  "season.codex.mutants.two": "Pesca en las profundidades en busca del {{item}}.",
-  "season.codex.mutants.three": "Experimenta con flores para descubrir el {{item}}.",
+  "chapter.codex.intro": "Gana {{ticket}} para crear objetos coleccionables y ponibles exclusivos para tu granja en esta temporada limitada... Date prisa antes de que se acabe el tiempo!",
+  "chapter.codex.howToEarn": "¿Cómo ganar {{ticket}} ?",
+  "chapter.codex.howToEarn.one": "Visite la plaza y entregue recursos a los Bumpkins.",
+  "chapter.codex.nextDrop": "Próxima Subasta",
+  "chapter.codex.chapterDrops": "Subastas de temporada",
+  "chapter.codex.chapterDrops.description": "Compite con otros por los objetos más raros! Visita la subasta en la plaza para obtener más información.",
+  "chapter.codex.soldOut": "Agotado",
+  "chapter.codex.mutants": "Mutantes",
+  "chapter.codex.mutants.discover": "Descubre a los mutantes de temporada!",
+  "chapter.codex.mutants.one": "Recoge huevos para descubrir el {{item}}.",
+  "chapter.codex.mutants.two": "Pesca en las profundidades en busca del {{item}}.",
+  "chapter.codex.mutants.three": "Experimenta con flores para descubrir el {{item}}.",
   "share.TweetText": "Visite My Sunflower Land Farm",
   "share.ShareYourFarmLink": "Comparte tu enlace a la granja",
   "share.ShowOffToFarmers": "Presume ante tus compañeros granjeros compartiendo el enlace de tu granja",
@@ -3412,13 +3412,13 @@
   "scavenger.guide.one": "La búsqueda de basura en Sunflower Land ofrece emocionantes oportunidades para descubrir tesoros escondidos y crear objetos valiosos. El primer aspecto de la búsqueda de tesoros consiste en buscar tesoros en la zona de excavación, donde puedes convertirte en un cazatesoros pirata. Si te adentras en esta zona, que se encuentra al norte de la playa, y si construyes una pala o un taladro de arena en la tienda de Jafar, podrás excavar en lugares arenosos para descubrir una variedad de tesoros.",
   "scavenger.guide.two": "Otra forma de buscar en la basura consiste en recolectar hongos silvestres y mágicos que aparecen espontáneamente en la granja y las islas circundantes. Estos hongos se pueden recolectar de forma gratuita y usarlos en recetas, misiones y objetos de artesanía. Esté atento a estos hongos, ya que se reponen en diferentes intervalos. Los hongos silvestres se reponen cada 16 horas, con un límite máximo de 5 hongos en tu granja. Las setas mágicas se reponen cada 48 horas en Beginner Island, cada 36 horas en Petal Paradise y cada 24 horas en Desert Island, con un límite máximo de 3 hongos en tu granja. Si tu tierra está llena, aparecerán hongos en las islas circundantes para que no te pierdas estos valiosos recursos.",
   "fruit.guide.two": "Para plantar fruta, necesitarás adquirir parcelas frutales más grandes, que estarán disponibles después de actualizar a Petal Paradise.",
-  "seasons.guide.one": "Las temporadas en Sunflower Land aportan emoción y frescura al juego, ofreciendo a los jugadores nuevos desafíos y oportunidades. Con cada temporada, los jugadores podrán disfrutar de una variedad de nuevos objetos portátiles y coleccionables, mutantes de temporada y tesoros raros, que crearán una experiencia de juego dinámica y en constante evolución. Esto anima a los jugadores a adaptar sus estrategias y explorar nuevas posibilidades en sus granjas. Además, los boletos de temporada añaden un elemento estratégico al juego. Los jugadores deben decidir cómo distribuir sus boletos de manera inteligente, ya sea recolectando objetos raros, optando por decoraciones y cosméticos o canjeando boletos por monedas. La mecánica estacional mantiene el juego atractivo y garantiza que siempre haya algo que esperar en Sunflower Land.",
+  "chapters.guide.one": "Las temporadas en Sunflower Land aportan emoción y frescura al juego, ofreciendo a los jugadores nuevos desafíos y oportunidades. Con cada temporada, los jugadores podrán disfrutar de una variedad de nuevos objetos portátiles y coleccionables, mutantes de temporada y tesoros raros, que crearán una experiencia de juego dinámica y en constante evolución. Esto anima a los jugadores a adaptar sus estrategias y explorar nuevas posibilidades en sus granjas. Además, los boletos de temporada añaden un elemento estratégico al juego. Los jugadores deben decidir cómo distribuir sus boletos de manera inteligente, ya sea recolectando objetos raros, optando por decoraciones y cosméticos o canjeando boletos por monedas. La mecánica estacional mantiene el juego atractivo y garantiza que siempre haya algo que esperar en Sunflower Land.",
   "keys": "Llaves",
   "cooking.guide.four": "Cuando la comida esté lista, recupérala del edificio haciendo clic en ella y moviéndola a tu inventario. Luego, puedes interactuar con tu NPC Bumpkin cerca de la tienda de campaña o la casa de la granja y darle de comer la comida preparada, lo que le ayudará a ganar XP y progresar en el juego.",
   "deliveries.guide.two": "Como jugador nuevo, comienzas con unas cuantas órdenes, pero a medida que subas de nivel a tus compatriotas, desbloquearás órdenes adicionales. De esta forma, los jugadores avanzados pueden completar más pedidos. Reciben nuevos pedidos cada 24 horas, que ofrecen una variedad de solicitudes, como alimentos, recursos, flores, etc. Al completar los pedidos, ganarás monedas, premios SFL o abonos de temporada.",
   "deliveries.guide.three": "Los granjeros pueden mejorar su amistad con ciertos PNJ completando las entregas. Además, regalarles flores mejorará aún más la amistad. Una vez que la barra de amistad esté llena, el NPC te recompensará con un regalo. No pierdas de vista el Códice y desafíate a ti mismo con una variedad de órdenes, subiendo de nivel y desbloqueando nuevos edificios según sea necesario para cumplir con las solicitudes más exigentes.",
-  "seasons.guide.two": "La disponibilidad de prendas de vestir y objetos coleccionables de temporada en la Mega Store de Stella, la Casa de Subastas y la tienda de Jafar añade otro nivel de emoción a Sunflower Land. Los jugadores deben reunir boletos de temporada, tesoros y otros requisitos específicos para fabricar estos objetos de temporada o pujar por ellos en subastas, lo que fomenta un sentido de competencia y urgencia. La planificación anticipada y la elaboración de estrategias son cruciales, ya que los jugadores tienen como objetivo conseguir los objetos que desean antes de que acabe el tiempo.",
-  "seasons.guide.three": "Con las ofertas únicas de cada temporada y la anticipación de eventos sorpresa, Sunflower Land mantiene a los jugadores interesados y entretenidos durante todo el año, creando una experiencia agrícola vibrante y en constante evolución.",
+  "chapters.guide.two": "La disponibilidad de prendas de vestir y objetos coleccionables de temporada en la Mega Store de Stella, la Casa de Subastas y la tienda de Jafar añade otro nivel de emoción a Sunflower Land. Los jugadores deben reunir boletos de temporada, tesoros y otros requisitos específicos para fabricar estos objetos de temporada o pujar por ellos en subastas, lo que fomenta un sentido de competencia y urgencia. La planificación anticipada y la elaboración de estrategias son cruciales, ya que los jugadores tienen como objetivo conseguir los objetos que desean antes de que acabe el tiempo.",
+  "chapters.guide.three": "Con las ofertas únicas de cada temporada y la anticipación de eventos sorpresa, Sunflower Land mantiene a los jugadores interesados y entretenidos durante todo el año, creando una experiencia agrícola vibrante y en constante evolución.",
   "description.gift.giver.boost": "Regala un regalo a los jugadores",
   "description.halo.boost": "Acceso a herramientas de modificación",
   "keys.dailyLimit": "Límite diario: {{keysAmountBoughtToday}} /1",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "Esta temporada tiene misiones emocionantes, objetos coleccionables raros y artículos portátiles exclusivos que puedes conseguir.",
   "birdieplaza.craftItems": "Para obtener estos objetos raros, debes recolectar {{seasonalTicket}} s e intercambiarlos en la Megastore de Stella o pujar en la Casa de Subastas.",
   "reward.streak.oneYear": "Recompensa de racha de 365 días",
-  "season.codex.nextDrop.available": "{{dropSupply}} disponible",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} disponible",
   "description.hoot.boost": "+0.5 Trigo, rábano, col rizada, arroz, cebada",
   "description.barley": "La cebada es un cereal nutritivo que se utiliza en la alimentación animal.",
   "gems.speedUp": "Acelerar",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Los palomitas no valoran el clavel amarillo.",
   "noBumpkin.bumpkinHelp": "Necesitas un Bumpkin que te ayude a plantar, cosechar, cortar, extraer y expandir tu tierra. ¡Pronto habrá soporte para añadir un Bumpkin!",
   "chores.weeklyChores": "Tareas semanales",
-  "chores.completeChoresToEarn": "Completa tareas para Bumpkins y gana {{seasonalTicket}} s.",
+  "chores.completeChoresToEarn": "Completa tareas para Bumpkins y gana {{chapterTicket}}s.",
   "chores.lockedChore": "Nivel {{level}}",
   "chores.completed": "Completado",
   "chores.complete": "Completa",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0.1 Productos de origen animal",
   "description.chicken.coop": "Un gallinero que se puede utilizar para criar pollos. Aumente la producción de huevos con este raro gallinero.",
   "description.gold.egg": "Un huevo dorado. Se sabe que lo que hay dentro es portador de buena suerte.",
-  "season.codex.howToEarn.two": "Completa las tareas para Bumpkins. (11 de noviembre)",
-  "season.codex.howToEarn.three": "¡Intercambia recompensas de animales y flores! (11 de noviembre)",
+  "chapter.codex.howToEarn.two": "Completa las tareas para Bumpkins. (11 de noviembre)",
+  "chapter.codex.howToEarn.three": "¡Intercambia recompensas de animales y flores! (11 de noviembre)",
   "description.cowboyHat.boost": "+1 Herraduras",
   "description.cowboyShirt.boost": "+1 Herraduras",
   "description.cowboyTrouser.boost": "+1 Herraduras",
-  "season.codex.howToEarn.comingSoon": "¡Gana herraduras con las tareas, las entregas y las recompensas!",
+  "chapter.codex.howToEarn.comingSoon": "¡Gana herraduras con las tareas, las entregas y las recompensas!",
   "description.cropCircle": "Un círculo misterioso que aparece en tu granja... ¿qué podría significar?",
   "description.omnifeed": "Actúa como el mejor alimento para todos los animales.",
   "description.brush": "Cepillo para animales. Utilízalo para mostrar afecto a tus animales.",
