--- a/src/lib/i18n/dictionaries/fr.json
+++ b/src/lib/i18n/dictionaries/fr.json
@@ -2898,7 +2898,7 @@
   "chores.hank": "Les corvées de Hank",
   "chores.kingdom": "Corvées du Château",
   "chores.kingdom.intro": "Accomplissez des tâches dans votre ferme pour gagner des points grâce à votre maison de faction",
-  "hayseedHankv2.dialog2": "Cependant, mes os ne sont plus ce qu'ils étaient. Si vous pouvez m'aider dans mes tâches quotidiennes, je vous récompenserai avec {{seasonalTicket}}.",
+  "hayseedHankv2.dialog2": "Cependant, mes os ne sont plus ce qu'ils étaient. Si vous pouvez m'aider dans mes tâches quotidiennes, je vous récompenserai avec {{chapterTicket}}.",
   "hayseedHankv2.newChoresAvailable": "Nouvelles tâches : {{timeLeft}}",
   "hayseedHankv2.confirmSkipChore": "Es-tu sûr de vouloir éviter cette corvée ?",
   "confirmation.craft": "Êtes-vous sûr de vouloir créer {{item}} ?",
@@ -3157,18 +3157,18 @@
   "season.lifetime.farmer": "Fermier à vie",
   "season.free.with.lifetime": "Gratuit avec Lifetime Farmer",
   "season.ticket.bonus": "+2 {{item}} s (livraisons et corvées)",
-  "season.codex.intro": "Gagnez {{ticket}} s pour fabriquer des objets de collection et des objets portables exclusifs pour votre ferme pendant cette saison limitée... Dépêchez-vous avant la fin du temps imparti !",
-  "season.codex.howToEarn": "Comment gagner {{ticket}} s ?",
-  "season.codex.howToEarn.one": "Visitez la place et apportez des ressources à Bumpkins.",
-  "season.codex.nextDrop": "Prochaine baisse",
-  "season.codex.seasonalDrops": "Baisses saisonnières",
-  "season.codex.seasonalDrops.description": "Rivalisez avec d'autres joueurs pour les objets les plus rares ! Visitez le commissaire-priseur sur la place pour plus de détails.",
-  "season.codex.soldOut": "Épuisé",
-  "season.codex.mutants": "Mutants",
-  "season.codex.mutants.discover": "Découvrez les mutants saisonniers !",
-  "season.codex.mutants.one": "Collectez des œufs pour découvrir le {{item}}.",
-  "season.codex.mutants.two": "Pêchez dans les profondeurs pour le {{item}}.",
-  "season.codex.mutants.three": "Expérimentez avec des fleurs pour découvrir le {{item}}.",
+  "chapter.codex.intro": "Gagnez {{ticket}} s pour fabriquer des objets de collection et des objets portables exclusifs pour votre ferme pendant cette saison limitée... Dépêchez-vous avant la fin du temps imparti !",
+  "chapter.codex.howToEarn": "Comment gagner {{ticket}} s ?",
+  "chapter.codex.howToEarn.one": "Visitez la place et apportez des ressources à Bumpkins.",
+  "chapter.codex.nextDrop": "Prochaine baisse",
+  "chapter.codex.chapterDrops": "Baisses saisonnières",
+  "chapter.codex.chapterDrops.description": "Rivalisez avec d'autres joueurs pour les objets les plus rares ! Visitez le commissaire-priseur sur la place pour plus de détails.",
+  "chapter.codex.soldOut": "Épuisé",
+  "chapter.codex.mutants": "Mutants",
+  "chapter.codex.mutants.discover": "Découvrez les mutants saisonniers !",
+  "chapter.codex.mutants.one": "Collectez des œufs pour découvrir le {{item}}.",
+  "chapter.codex.mutants.two": "Pêchez dans les profondeurs pour le {{item}}.",
+  "chapter.codex.mutants.three": "Expérimentez avec des fleurs pour découvrir le {{item}}.",
   "special.event.airdrop": "Airdrop",
   "statements.wishing.well.worthwell": "Il y a actuellement {{rewards}} de récompenses SFL dans le puits !",
   "statements.translation.joinDiscord": "Rejoignez Discord",
@@ -3410,15 +3410,15 @@
   "scavenger.guide.one": "Les fouilles à Sunflower Land offrent des opportunités intéressantes de découvrir des trésors cachés et de fabriquer des objets de valeur. Le premier aspect de la fouille consiste à chercher des trésors dans la zone de fouille, où vous pouvez devenir un chasseur de trésors pirate. En vous aventurant dans cette zone, située au nord de la plage, et en fabriquant une pelle à sable ou une perceuse à sable dans la boutique de Jafar, vous pourrez creuser dans des zones sablonneuses pour découvrir une variété de trésors.",
   "scavenger.guide.two": "Une autre forme de fouille consiste à cueillir des champignons sauvages et magiques qui apparaissent spontanément sur votre ferme et sur les îles environnantes. Ces champignons peuvent être collectés gratuitement et utilisés dans des recettes, des quêtes et des objets d'artisanat. Surveillez ces champignons, car ils se réapprovisionnent à différents intervalles. Les champignons sauvages se réapprovisionnent toutes les 16 heures, avec une limite maximale de 5 champignons sur votre ferme. Les champignons magiques se réapprovisionnent toutes les 48 heures sur Beginner Island, toutes les 36 heures sur Petal Paradise et toutes les 24 heures sur Desert Island, avec une limite maximale de 3 champignons dans votre ferme. Si votre terrain est plein, des champignons apparaîtront sur les îles environnantes, ce qui vous permettra de ne pas manquer ces précieuses ressources.",
   "fruit.guide.two": "Pour planter des fruits, vous devrez acquérir de plus grandes parcelles de fruits, qui seront disponibles après la mise à niveau vers Petal Paradise.",
-  "seasons.guide.one": "Les saisons de Sunflower Land apportent de l'enthousiasme et de la fraîcheur au jeu, offrant aux joueurs de nouveaux défis et de nouvelles opportunités. À chaque saison, les joueurs peuvent s'attendre à découvrir une variété de nouveaux objets portables et de collection, des mutants saisonniers et des trésors rares, créant ainsi une expérience de jeu dynamique et évolutive. Cela encourage les joueurs à adapter leurs stratégies et à explorer de nouvelles possibilités dans leurs fermes. De plus, les billets saisonniers ajoutent un élément stratégique au jeu : les joueurs doivent décider comment attribuer leurs billets judicieusement, qu'il s'agisse de collectionner des objets rares, d'opter pour des décorations et des cosmétiques, ou d'échanger des billets contre des pièces. La mécanique saisonnière rend le jeu captivant et garantit qu'il y a toujours quelque chose à attendre avec impatience dans Sunflower Land.",
+  "chapters.guide.one": "Les saisons de Sunflower Land apportent de l'enthousiasme et de la fraîcheur au jeu, offrant aux joueurs de nouveaux défis et de nouvelles opportunités. À chaque saison, les joueurs peuvent s'attendre à découvrir une variété de nouveaux objets portables et de collection, des mutants saisonniers et des trésors rares, créant ainsi une expérience de jeu dynamique et évolutive. Cela encourage les joueurs à adapter leurs stratégies et à explorer de nouvelles possibilités dans leurs fermes. De plus, les billets saisonniers ajoutent un élément stratégique au jeu : les joueurs doivent décider comment attribuer leurs billets judicieusement, qu'il s'agisse de collectionner des objets rares, d'opter pour des décorations et des cosmétiques, ou d'échanger des billets contre des pièces. La mécanique saisonnière rend le jeu captivant et garantit qu'il y a toujours quelque chose à attendre avec impatience dans Sunflower Land.",
   "keys": "Clés",
   "seasonedFarmer.description": "Collectez 50 billets de saison",
   "crops.guide.two": "Pour faire pousser des cultures, vous devez acheter les semences correspondantes sur le marché de Betty. Chaque culture a un temps de croissance différent, allant de 1 minute pour les tournesols à 36 heures pour le chou frisé. Une fois que les cultures ont atteint leur pleine maturité, vous pouvez les récolter et en récolter les fruits.",
   "cooking.guide.four": "Une fois que la nourriture est prête, récupérez-la du bâtiment en cliquant dessus et en la déplaçant dans votre inventaire. Ensuite, vous pouvez interagir avec votre PNJ Bumpkin près de la tente ou de la maison de la ferme et lui donner les plats préparés, ce qui l'aidera à gagner de l'expérience et à progresser dans le jeu.",
   "deliveries.guide.two": "En tant que nouveau joueur, vous commencez avec quelques commandes, mais au fur et à mesure que vous augmentez le niveau de votre bumpkin, vous débloquerez des commandes supplémentaires. De cette façon, les joueurs avancés peuvent effectuer plus de commandes. De nouvelles commandes arrivent toutes les 24 heures, proposant une gamme de demandes concernant des aliments, des ressources, des fleurs, etc. En complétant les commandes, vous gagnerez des pièces, des SFL ou des abonnements saisonniers.",
   "deliveries.guide.three": "Les agriculteurs peuvent améliorer leur amitié avec certains PNJ en effectuant des livraisons. De plus, leur offrir des fleurs renforcera encore l'amitié. Une fois que la barre d'amitié est pleine, le PNJ vous récompensera avec un cadeau. Gardez un œil sur le Codex et mettez-vous au défi avec une variété de commandes, montez de niveau et débloquez de nouveaux bâtiments si nécessaire pour répondre à des demandes plus exigeantes.",
-  "seasons.guide.two": "La disponibilité d'articles portables et d'objets de collection saisonniers au Mega Store de Stella, à la maison des ventes et à la boutique de Jafar ajoute une touche d'enthousiasme à Sunflower Land. Les joueurs doivent rassembler des billets saisonniers, des trésors et d'autres objets spécifiques pour fabriquer ces objets saisonniers ou enchérir sur eux lors des ventes aux enchères, ce qui favorise un sentiment de compétition et d'urgence. La planification à l'avance et l'élaboration de stratégies deviennent cruciales, car les joueurs cherchent à obtenir les objets qu'ils souhaitent avant la fin du temps imparti.",
-  "seasons.guide.three": "Grâce aux offres uniques de chaque saison et à l'anticipation d'événements surprises, Sunflower Land permet aux joueurs de rester engagés et divertis tout au long de l'année, créant ainsi une expérience agricole dynamique et en constante évolution.",
+  "chapters.guide.two": "La disponibilité d'articles portables et d'objets de collection saisonniers au Mega Store de Stella, à la maison des ventes et à la boutique de Jafar ajoute une touche d'enthousiasme à Sunflower Land. Les joueurs doivent rassembler des billets saisonniers, des trésors et d'autres objets spécifiques pour fabriquer ces objets saisonniers ou enchérir sur eux lors des ventes aux enchères, ce qui favorise un sentiment de compétition et d'urgence. La planification à l'avance et l'élaboration de stratégies deviennent cruciales, car les joueurs cherchent à obtenir les objets qu'ils souhaitent avant la fin du temps imparti.",
+  "chapters.guide.three": "Grâce aux offres uniques de chaque saison et à l'anticipation d'événements surprises, Sunflower Land permet aux joueurs de rester engagés et divertis tout au long de l'année, créant ainsi une expérience agricole dynamique et en constante évolution.",
   "description.gift.giver.boost": "Offrez un cadeau aux joueurs",
   "description.halo.boost": "Accès aux outils de modification",
   "keys.dailyLimit": "Limite quotidienne : {{keysAmountBoughtToday}} /1",
@@ -3532,7 +3532,7 @@
   "birdieplaza.seasonQuests": "Cette saison propose des quêtes passionnantes, des objets de collection rares et des objets portables exclusifs que vous pouvez gagner.",
   "birdieplaza.craftItems": "Pour obtenir ces objets rares, vous devez collecter des {{seasonalTicket}} s et les échanger au Stella's Megastore ou enchérir à l'hôtel des ventes.",
   "reward.streak.oneYear": "Récompense d'une série de 365 jours",
-  "season.codex.nextDrop.available": "{{dropSupply}} disponible",
+  "chapter.codex.nextDrop.available": "{{dropSupply}} disponible",
   "description.hoot.boost": "+0,5 blé, radis, chou frisé, riz, orge",
   "description.barley": "L'orge est une céréale nutritive utilisée dans l'alimentation animale.",
   "gems.speedUp": "Accélérez",
@@ -3627,7 +3627,7 @@
   "flower.breed.yellowCarnation": "Les Bumpkins n'apprécient pas l'œillet jaune.",
   "noBumpkin.bumpkinHelp": "Vous avez besoin d'un Bumpkin pour vous aider à planter, récolter, couper, exploiter et agrandir vos terres. L'assistance sera bientôt disponible pour ajouter un Bumpkin !",
   "chores.weeklyChores": "Tâches hebdomadaires",
-  "chores.completeChoresToEarn": "Accomplissez les corvées pour que Bumpkins gagne {{seasonalTicket}} s.",
+  "chores.completeChoresToEarn": "Accomplissez les corvées pour que Bumpkins gagne {{chapterTicket}}s.",
   "chores.lockedChore": "Niveau {{level}}",
   "chores.completed": "Terminé",
   "chores.complete": "Achevée",
@@ -4040,12 +4040,12 @@
   "description.free.range": "+0,1 Produits d'origine animale",
   "description.chicken.coop": "Un poulailler qui peut être utilisé pour élever des poulets. Augmentez la production d'œufs avec ce poulailler rare.",
   "description.gold.egg": "Un œuf d'or. Ce qui se trouve à l'intérieur est connu pour être porteur de bonne fortune.",
-  "season.codex.howToEarn.two": "Terminez les corvées pour Bumpkins. (11 novembre)",
-  "season.codex.howToEarn.three": "Échangez des primes d'animaux et de fleurs ! (11 novembre)",
+  "chapter.codex.howToEarn.two": "Terminez les corvées pour Bumpkins. (11 novembre)",
+  "chapter.codex.howToEarn.three": "Échangez des primes d'animaux et de fleurs ! (11 novembre)",
   "description.cowboyHat.boost": "+1 Fers à cheval",
   "description.cowboyShirt.boost": "+1 Fers à cheval",
   "description.cowboyTrouser.boost": "+1 Fers à cheval",
-  "season.codex.howToEarn.comingSoon": "Gagnez des fers à cheval grâce aux corvées, aux livraisons et aux primes !",
+  "chapter.codex.howToEarn.comingSoon": "Gagnez des fers à cheval grâce aux corvées, aux livraisons et aux primes !",
   "description.cropCircle": "Un cercle mystérieux qui apparaît dans votre ferme... qu'est-ce que cela pourrait signifier ?",
   "description.omnifeed": "C'est le meilleur aliment pour tous les animaux.",
   "description.brush": "Brosse pour animaux Utilisez-le pour montrer de l'affection à vos animaux.",
